instagram and strava updates from 2017-03-26

--- a/instagram12.html
+++ b/instagram12.html
@@ -6,6 +6,123 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000080.jpg" title="Smiles for miles on this morning's sunrise team ride. #LovestarRaceClub #bicycle #bikechi #cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Smiles for miles on this morning's sunrise team ride. #LovestarRaceClub #bicycle #bikechi #cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000080.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000118.jpg" title="Same stealthy bag has a blaze orange Cordura interior. #lovestarbicyclebags #handmade #bicycle #cycling #bicyclebag #cordura #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Same stealthy bag has a blaze orange Cordura interior. #lovestarbicyclebags #handmade #bicycle #cycling #bicyclebag #cordura #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000118.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000119.jpg" title="Finished up a stealthy #lovestarbicyclebags SaddlePack this morning. #handmade #bicycle #cycling #bicyclebag #cordura #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Finished up a stealthy #lovestarbicyclebags SaddlePack this morning. #handmade #bicycle #cycling #bicyclebag #cordura #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000119.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000553.jpg" title="#lovestarfactoryteam #mocabang" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>#lovestarfactoryteam #mocabang</small>
+                           </div>
+                           <img src="../lsphotos/image000553.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000083.jpg" title="New mini-bike storage systems at #lovestarbicyclebags H.Q." rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>New mini-bike storage systems at #lovestarbicyclebags H.Q.</small>
+                           </div>
+                           <img src="../lsphotos/image000083.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000554.jpg" title="#cycling #bicycle #moots #bikechi #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#cycling #bicycle #moots #bikechi #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000554.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000120.jpg" title="Nothing like an early morning Estate-ly ride with my boys. #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>agonz21</h4>
+                              <small>Nothing like an early morning Estate-ly ride with my boys. #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000120.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000555.jpg" title="Crushers. #cycling #bicycle #bikechi #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Crushers. #cycling #bicycle #bikechi #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000555.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000556.jpg" title="Pair of Parlees #lovestarfactoryteam #cycling #bikechi #bicycle #myparlee" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Pair of Parlees #lovestarfactoryteam #cycling #bikechi #bicycle #myparlee</small>
+                           </div>
+                           <img src="../lsphotos/image000556.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000557.jpg" title="This guy...always a class act. #lovestarfactoryteam #cycling #bicycle #sockdoping" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -142,123 +259,6 @@
                               <small>Nice kits...#lovestarfactoryteam #bikechi</small>
                            </div>
                            <img src="../lsphotos/image000564.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000565.jpg" title="#lovestarfactoryteam had their sock game on fleek this morning. #sockdoping #bicycle #cycling #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#lovestarfactoryteam had their sock game on fleek this morning. #sockdoping #bicycle #cycling #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000565.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000566.jpg" title="Woohoo! 206.4 miles, 9000+ calories, and 17.5 hours later I finished the Dirty Kanza 200! Special thanks and so much love to my wife, Roberta for supporting all my crazy training!! Big shout out to @casadewaggoner and @elliotlovestarbicycles for doing this with me, sorry your days didn't end the way you hoped! :-( Big thank you to Matt for being our support crew. And special thanks to @ponylou and the crew at #ponyshop for making sure my bike was in tip top shape. And finally, special thanks to David Englund for teaching how to keep going when it feels like I've got nothing left. #lovestarfactoryteam #crushgravel #dk200 #superx" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Woohoo! 206.4 miles, 9000+ calories, and 17.5 hours later I finished the Dirty Kanza 200! Special thanks and so much love to my wife, Roberta for supporting all my crazy training!! Big shout out to @casadewaggoner and @elliotlovestarbicycles for doing this with me, sorry your days didn't end the way you hoped! :-( Big thank you to Matt for being our support crew. And special thanks to @ponylou and the crew at #ponyshop for making sure my bike was in tip top shape. And finally, special thanks to David Englund for teaching how to keep going when it feels like I've got nothing left. #lovestarfactoryteam #crushgravel #dk200 #superx</small>
-                           </div>
-                           <img src="../lsphotos/image000566.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000567.jpg" title="Finish fuel. 161 in the books and just 46 left to go #lovestarfactoryteam #crushgravel #dk200" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Finish fuel. 161 in the books and just 46 left to go #lovestarfactoryteam #crushgravel #dk200</small>
-                           </div>
-                           <img src="../lsphotos/image000567.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000568.jpg" title="Taking a rest at the 1/2 way point. 102 down, 104 to go! #lovestarfactoryteam #crushgravel #dk200" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Taking a rest at the 1/2 way point. 102 down, 104 to go! #lovestarfactoryteam #crushgravel #dk200</small>
-                           </div>
-                           <img src="../lsphotos/image000568.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000569.jpg" title="1/2 way through leg one and feeling great. We got our first flat unfortunately so an unplanned pit stop makes for a photo op. #lovestarfactoryteam #crushgravel #dk200" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>1/2 way through leg one and feeling great. We got our first flat unfortunately so an unplanned pit stop makes for a photo op. #lovestarfactoryteam #crushgravel #dk200</small>
-                           </div>
-                           <img src="../lsphotos/image000569.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000540.jpg" title="#dirtykanza200 start line! #cycling #bicycle #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#dirtykanza200 start line! #cycling #bicycle #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000540.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000570.jpg" title="Out for a spin this morning, and look who catches up with me while crushing some morning miles... #cycling #bicycle #lovestarfactoryteam #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Out for a spin this morning, and look who catches up with me while crushing some morning miles... #cycling #bicycle #lovestarfactoryteam #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000570.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000571.jpg" title="Enjoyed Mike's donuts & Chicken in Kenosha for breakfast today. #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Enjoyed Mike's donuts & Chicken in Kenosha for breakfast today. #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000571.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000572.jpg" title="#baaw #lovestarfactoryteam #moots #supersix" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>#baaw #lovestarfactoryteam #moots #supersix</small>
-                           </div>
-                           <img src="../lsphotos/image000572.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
