--- a/instagram16.html
+++ b/instagram16.html
@@ -6,6 +6,123 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000141.jpg" title="Riding Kettle today gettin' my legs ripped off by @jobywankenoby #cycling #mountainbike #fatbike #bikepacking #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Riding Kettle today gettin' my legs ripped off by @jobywankenoby #cycling #mountainbike #fatbike #bikepacking #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000141.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000605.jpg" title="Mini group ride. #lovestarfactoryteam #striderbikes #clearybikes #teammates" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Mini group ride. #lovestarfactoryteam #striderbikes #clearybikes #teammates</small>
+                           </div>
+                           <img src="../lsphotos/image000605.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000142.jpg" title="Calm #bicycle #moots #cycling #lovestarbicyclebags #lakemichigan #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Calm #bicycle #moots #cycling #lovestarbicyclebags #lakemichigan #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000142.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000606.jpg" title="Found some local Cobbles this morning. #HellOfTheNorthShore #cycling #moots #bicycle #pave #cobbles #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Found some local Cobbles this morning. #HellOfTheNorthShore #cycling #moots #bicycle #pave #cobbles #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000606.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000143.jpg" title="Finished up a slick Black and Lime #lovestarbicyclebags SaddlePack tonight. #handmade #custom #bicyclebag #bikepackingbags #bikepacking #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Finished up a slick Black and Lime #lovestarbicyclebags SaddlePack tonight. #handmade #custom #bicyclebag #bikepackingbags #bikepacking #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000143.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000607.jpg" title="Gravel Train. #lovestarfactoryteam #cycling #cyclocross #gravelgrinder #dprt" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Gravel Train. #lovestarfactoryteam #cycling #cyclocross #gravelgrinder #dprt</small>
+                           </div>
+                           <img src="../lsphotos/image000607.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000608.jpg" title="Very muddy & windy ride with an awesome crew today. #lovestarfactoryteam #cycling #gravelgrinder #dprt" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Very muddy & windy ride with an awesome crew today. #lovestarfactoryteam #cycling #gravelgrinder #dprt</small>
+                           </div>
+                           <img src="../lsphotos/image000608.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000144.jpg" title="A nice #shoplocal kind of morning. #otherbrothercoffee #ponyshop #lovestarbicyclebags #shoplife #bikemechanic #cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>A nice #shoplocal kind of morning. #otherbrothercoffee #ponyshop #lovestarbicyclebags #shoplife #bikemechanic #cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000144.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000145.jpg" title="Lots of heavy-duty blue Cordura on the interior...#lovestarbicyclebags #handmade #bikepacking #bikepackingbags #framebag #cycling #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Lots of heavy-duty blue Cordura on the interior...#lovestarbicyclebags #handmade #bikepacking #bikepackingbags #framebag #cycling #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000145.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000146.jpg" title="Finished up a stealthy black custom frame at tonight. Just a hint of blue on the exterior. #lovestarbicyclebags #handmade #cycling #bicyclebag #bikepacking #bikepackingbags #SewRad" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -142,123 +259,6 @@
                               <small>#babyARC was up most of last night feeling sick & sad. After a tough morning, I just bundled him up and we went for a ride, he passed out after the first 100 feet...so we rode around for an hour until he woke up. Fresh air and sunshine are good medicine. #outsideisfree #optoutside #cycling #fatbike #lovestarbicyclebags</small>
                            </div>
                            <img src="../lsphotos/image000150.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000151.jpg" title="Nothing says Spring like a fresh dusting of snow. #cycling #bikechi #moots #psychloX #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Nothing says Spring like a fresh dusting of snow. #cycling #bikechi #moots #psychloX #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000151.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000152.jpg" title="Good Friday sunrise ride. #cycling #bikechi #moots #psychloX #cannondale #superX #lovestarfactoryteam #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Good Friday sunrise ride. #cycling #bikechi #moots #psychloX #cannondale #superX #lovestarfactoryteam #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000152.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000153.jpg" title="Spring is supposedly here in #Chicago...complete with sleet, snow & freezing rain. Had to mount up some mudguards for tomorrow's ride... #cycling #bikechi #moots #psychloX #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Spring is supposedly here in #Chicago...complete with sleet, snow & freezing rain. Had to mount up some mudguards for tomorrow's ride... #cycling #bikechi #moots #psychloX #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000153.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000154.jpg" title="Chicagoland landmarks. #bikechi #moots #psychloX #bicycle #cycling #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Chicagoland landmarks. #bikechi #moots #psychloX #bicycle #cycling #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000154.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000615.jpg" title="Beautiful day for a recovery ride to the Fort. #lovestarfactoryteam #myparlee" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>agonz21</h4>
-                              <small>Beautiful day for a recovery ride to the Fort. #lovestarfactoryteam #myparlee</small>
-                           </div>
-                           <img src="../lsphotos/image000615.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000155.jpg" title="Chilly Sunny Spring ride. #cycling #lovestarbicyclebags #bicycle #moots #psychloX" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Chilly Sunny Spring ride. #cycling #lovestarbicyclebags #bicycle #moots #psychloX</small>
-                           </div>
-                           <img src="../lsphotos/image000155.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000616.jpg" title="The #lovestarfactoryteam in Racine, WI from yesterday's monster ride." rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>theandyhudson</h4>
-                              <small>The #lovestarfactoryteam in Racine, WI from yesterday's monster ride.</small>
-                           </div>
-                           <img src="../lsphotos/image000616.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000617.jpg" title="Riding with great people is the best. Great job y'all #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>agonz21</h4>
-                              <small>Riding with great people is the best. Great job y'all #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000617.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000618.jpg" title="Today. #cycling #parlee #scottbikes #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>theandyhudson</h4>
-                              <small>Today. #cycling #parlee #scottbikes #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000618.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
