--- a/instagram21.html
+++ b/instagram21.html
@@ -6,6 +6,123 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000086.jpg" title="Robert McClory Path & the Illinois/Wisconsin border. #fatbike #lovestarbicyclebags #raphafestive500 #festive500" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Robert McClory Path & the Illinois/Wisconsin border. #fatbike #lovestarbicyclebags #raphafestive500 #festive500</small>
+                           </div>
+                           <img src="../lsphotos/image000086.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000207.jpg" title="Finally getting some snow under these tire's! #fatbike #festive500 #cycling #lovestarbicyclebags #bikepackingbags #bikepacking #bicycle #raphafestive500" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Finally getting some snow under these tire's! #fatbike #festive500 #cycling #lovestarbicyclebags #bikepackingbags #bikepacking #bicycle #raphafestive500</small>
+                           </div>
+                           <img src="../lsphotos/image000207.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000208.jpg" title="Driving snow, soul crushing wind & 10psi made for a short #raphafestive500 ride today. #fatbike #cycling #bicycle #festive500 #lovestarbicyclebags #bikepackingbags #bikepacking" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Driving snow, soul crushing wind & 10psi made for a short #raphafestive500 ride today. #fatbike #cycling #bicycle #festive500 #lovestarbicyclebags #bikepackingbags #bikepacking</small>
+                           </div>
+                           <img src="../lsphotos/image000208.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000639.jpg" title="Angry sky & punishing winds for today's #raphafestive500 ride. #cycling #cyclocross #cx #moots #psychloX #bicycle #lakemichigan #lovestarfactoryteam #festive500" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Angry sky & punishing winds for today's #raphafestive500 ride. #cycling #cyclocross #cx #moots #psychloX #bicycle #lakemichigan #lovestarfactoryteam #festive500</small>
+                           </div>
+                           <img src="../lsphotos/image000639.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000209.jpg" title="Didn't think I'd see this much grass this time of year... #elniño #elninoisspanishforthenino #christmaslights #cycling #cyclocross #cx #moots #lovestarbicyclebags #raphafestive500 #festive500" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Didn't think I'd see this much grass this time of year... #elniño #elninoisspanishforthenino #christmaslights #cycling #cyclocross #cx #moots #lovestarbicyclebags #raphafestive500 #festive500</small>
+                           </div>
+                           <img src="../lsphotos/image000209.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000640.jpg" title="Christmas Eve ride...complete with detour to see the #HomeAlone house. #buzzyourgirlfriendwoof #cycling #moots #lovestarfactoryteam #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Christmas Eve ride...complete with detour to see the #HomeAlone house. #buzzyourgirlfriendwoof #cycling #moots #lovestarfactoryteam #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000640.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000210.jpg" title="Christmas Eve adventures. #fatbike #clearybikes #lovestarbicyclebags #bikepackingbags #bikepacking #cycling #bicycle" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Christmas Eve adventures. #fatbike #clearybikes #lovestarbicyclebags #bikepackingbags #bikepacking #cycling #bicycle</small>
+                           </div>
+                           <img src="../lsphotos/image000210.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000211.jpg" title="Sunset ride. #fatbike #cycling #lovestarbicyclebags #bikepackingbags #bikepacking #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sunset ride. #fatbike #cycling #lovestarbicyclebags #bikepackingbags #bikepacking #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000211.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000082.jpg" title="So muddy. So fun. #hughjassfatbikeseries #fatbike #lovestarfactoryteam #lovestarbicyclebags #championsystem" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>So muddy. So fun. #hughjassfatbikeseries #fatbike #lovestarfactoryteam #lovestarbicyclebags #championsystem</small>
+                           </div>
+                           <img src="../lsphotos/image000082.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000641.jpg" title="First #fatbike race in the books. Thanks @wheelandsprocket for a great time! #lovestarfactoryteam #cycling" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -142,123 +259,6 @@
                               <small>Kudos to teammate @ddave12000 for nabbing 15th in the 4s and 6th in the 4/5s today!! #montrosecx #Cyclocross #cx #lovestarfactoryteam</small>
                            </div>
                            <img src="../lsphotos/image000644.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000645.jpg" title="Great photo courtesy of @elliotlovestarbicycles #lovestarfactoryteam #montrosecx" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Great photo courtesy of @elliotlovestarbicycles #lovestarfactoryteam #montrosecx</small>
-                           </div>
-                           <img src="../lsphotos/image000645.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000646.jpg" title="Portable hot tub...must be a cross race. #Cyclocross #cx #lovestarfactoryteam #montrosecx #fatbike" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Portable hot tub...must be a cross race. #Cyclocross #cx #lovestarfactoryteam #montrosecx #fatbike</small>
-                           </div>
-                           <img src="../lsphotos/image000646.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000647.jpg" title="Big shout out to these to guys! @elliotlovestarbicycles and @casadewaggoner. Had such a blast racing CX with you guys this year!! Thanks for all the tips, encouragement, etc!  #lovestarfactoryteam #lsb" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Big shout out to these to guys! @elliotlovestarbicycles and @casadewaggoner. Had such a blast racing CX with you guys this year!! Thanks for all the tips, encouragement, etc!  #lovestarfactoryteam #lsb</small>
-                           </div>
-                           <img src="../lsphotos/image000647.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000648.jpg" title="Last Cross race of 2015 and it was a great one (two?)! Got upgraded to Cat4 so I did that for the first time and then did Cat4/5 after. Got 15th and 6th respectively. #savingmybestforlast #lsb #lovestarfactoryteam #montrosecx #alreadylookingforwardtonextyear" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Last Cross race of 2015 and it was a great one (two?)! Got upgraded to Cat4 so I did that for the first time and then did Cat4/5 after. Got 15th and 6th respectively. #savingmybestforlast #lsb #lovestarfactoryteam #montrosecx #alreadylookingforwardtonextyear</small>
-                           </div>
-                           <img src="../lsphotos/image000648.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000218.jpg" title="Congratulations Lovestar Factory Team on a fabulous race @ state finals and a great season! #lovestar #lovestarfactoryteam #lovestarbicyclebags #cyclocross #cyclocrosschicago #cycling" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>Congratulations Lovestar Factory Team on a fabulous race @ state finals and a great season! #lovestar #lovestarfactoryteam #lovestarbicyclebags #cyclocross #cyclocrosschicago #cycling</small>
-                           </div>
-                           <img src="../lsphotos/image000218.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000219.jpg" title="Racing his heart out to finish strong while the guys in the background are hot-tubbing it...must be cyclocross! Hahaha #cyclocross #cycling #cyclocrosschicago #lovestar #lovestarfactoryteam #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>Racing his heart out to finish strong while the guys in the background are hot-tubbing it...must be cyclocross! Hahaha #cyclocross #cycling #cyclocrosschicago #lovestar #lovestarfactoryteam #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000219.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000649.jpg" title="Found a place with a bite size helping of gnar right next to my house. #fatbike #globalfatbikeday #bikechi #cycling #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Found a place with a bite size helping of gnar right next to my house. #fatbike #globalfatbikeday #bikechi #cycling #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000649.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000220.jpg" title="Happy Global Fatbike Day! Here's to shorts in December! #globalfatbikeday #lovestarbicyclebags #cycling #bikechi #ElNino is Spanish for #TheNino" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Happy Global Fatbike Day! Here's to shorts in December! #globalfatbikeday #lovestarbicyclebags #cycling #bikechi #ElNino is Spanish for #TheNino</small>
-                           </div>
-                           <img src="../lsphotos/image000220.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000221.jpg" title="Quick & early ride this morning with good friends. Fog & mist made for a chilly ride...but not to shabby considering it's almost a week into December. #lovestarfactoryteam #cycling #moots #cx #cyclocross #bikechi #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Quick & early ride this morning with good friends. Fog & mist made for a chilly ride...but not to shabby considering it's almost a week into December. #lovestarfactoryteam #cycling #moots #cx #cyclocross #bikechi #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000221.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
