--- a/instagram23.html
+++ b/instagram23.html
@@ -6,6 +6,123 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000230.jpg" title="Awesome race @mariannebennetttattoo!!!!! Tough course, great ride. Way to push through!! Geat shot today @elliotlovestarbicycles  #cyclocrosschicago #cyclocross #cycling #lovestarfactoryteam #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>Awesome race @mariannebennetttattoo!!!!! Tough course, great ride. Way to push through!! Geat shot today @elliotlovestarbicycles  #cyclocrosschicago #cyclocross #cycling #lovestarfactoryteam #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000230.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000534.jpg" title="#babysnub wanted to get in on the sand pit action. #ILRcx #cyclocross #cx #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#babysnub wanted to get in on the sand pit action. #ILRcx #cyclocross #cx #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000534.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000653.jpg" title="Droppin into the sand. #ILRcx #cyclocross #cx #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Droppin into the sand. #ILRcx #cyclocross #cx #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000653.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000654.jpg" title="@mariannebennetttattoo lookin' pro in the sand at #ILRcx #cyclocross #cx #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>@mariannebennetttattoo lookin' pro in the sand at #ILRcx #cyclocross #cx #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000654.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000655.jpg" title="Hustle & flow. #cyclocross #cx #ILRcx #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Hustle & flow. #cyclocross #cx #ILRcx #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000655.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000656.jpg" title="Out on the #ILRcx Course for my second race today. Lots of sand... #cyclocross #cx #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Out on the #ILRcx Course for my second race today. Lots of sand... #cyclocross #cx #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000656.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000657.jpg" title="@elliotlovestarbicycles rocking in the single speed category. #ILRcx #lsb #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>@elliotlovestarbicycles rocking in the single speed category. #ILRcx #lsb #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000657.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000658.jpg" title="Tried my First single speed race today...feeling some n+1 vibes already. 🙄#ILRcx #cylist #cyclocross #cx #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Tried my First single speed race today...feeling some n+1 vibes already. 🙄#ILRcx #cylist #cyclocross #cx #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000658.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000659.jpg" title="@ddave12000 rocking his first Masters race today. #lovestarfactoryteam #cyclocross #cylist #cycling #cx #ILRcx" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>@ddave12000 rocking his first Masters race today. #lovestarfactoryteam #cyclocross #cylist #cycling #cx #ILRcx</small>
+                           </div>
+                           <img src="../lsphotos/image000659.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000660.jpg" title="Tried my hand at the Master 35+ category today. These guys are good! Had a brutal first lap which included crashing at the barriers. #lovestarfactoryteam #lsb #IRLcx" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>ddave12000</h4>
@@ -142,123 +259,6 @@
                               <small>Great race today at #CamptonCX. On the way to 9th place in the 4/5 race. #lovestarfactoryteam #lsb</small>
                            </div>
                            <img src="../lsphotos/image000669.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000670.jpg" title="Had a great crew out at #camptonCX today. Two top 10 finishes for #lovestarfactoryteam riders! #cyclocross #cx #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Had a great crew out at #camptonCX today. Two top 10 finishes for #lovestarfactoryteam riders! #cyclocross #cx #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000670.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000232.jpg" title="Concentrating hard to crush those barriers!!! : ) #lovestarfactoryteam #lovestarbicyclebags #cycling #cyclocrosschicago #firstrace #youngestontheteam #determinedlikenoother" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>Concentrating hard to crush those barriers!!! : ) #lovestarfactoryteam #lovestarbicyclebags #cycling #cyclocrosschicago #firstrace #youngestontheteam #determinedlikenoother</small>
-                           </div>
-                           <img src="../lsphotos/image000232.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000233.jpg" title="Exciting race. Tough conditions. #lovestarfactoryteam #lovestarbicyclebags #cyclocrosschicago #cycling #cyclinginthemidwest" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>Exciting race. Tough conditions. #lovestarfactoryteam #lovestarbicyclebags #cyclocrosschicago #cycling #cyclinginthemidwest</small>
-                           </div>
-                           <img src="../lsphotos/image000233.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000234.jpg" title="First race, great ride! #cyclocrosschicago #cyclocross #cycling #lovestarfactoryteam #lovestarbicyclebags #cycling" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>First race, great ride! #cyclocrosschicago #cyclocross #cycling #lovestarfactoryteam #lovestarbicyclebags #cycling</small>
-                           </div>
-                           <img src="../lsphotos/image000234.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000235.jpg" title="Lining up for that steep downhill switchback turn!!! And deep mud... #lovestarfactoryteam #lovestarbicyclebags #greatriding #greatrace #cyclocrosschicago #cyclocross #cycling" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>Lining up for that steep downhill switchback turn!!! And deep mud... #lovestarfactoryteam #lovestarbicyclebags #greatriding #greatrace #cyclocrosschicago #cyclocross #cycling</small>
-                           </div>
-                           <img src="../lsphotos/image000235.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000236.jpg" title="First medal : ) #lovestarfactoryteam #lovestarbicyclebags #cycling #youngestontheteam #firstrace #cyclocrosschicago" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>First medal : ) #lovestarfactoryteam #lovestarbicyclebags #cycling #youngestontheteam #firstrace #cyclocrosschicago</small>
-                           </div>
-                           <img src="../lsphotos/image000236.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000237.jpg" title="Pushing through on a tough course! #cyclocrosschicago #lovestarfactoryteam #lovestarbicyclebags #cycling #cyclocrossinthemidwest" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>Pushing through on a tough course! #cyclocrosschicago #lovestarfactoryteam #lovestarbicyclebags #cycling #cyclocrossinthemidwest</small>
-                           </div>
-                           <img src="../lsphotos/image000237.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000238.jpg" title="Congratulations to Dave of Lovestar Factory Team for making it to the podium today! Tough race, great ride!! #cyclocrosschicago #lovestarfactoryteam #lovestarbicyclebags #cylcocrossinthemidwest" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>Congratulations to Dave of Lovestar Factory Team for making it to the podium today! Tough race, great ride!! #cyclocrosschicago #lovestarfactoryteam #lovestarbicyclebags #cylcocrossinthemidwest</small>
-                           </div>
-                           <img src="../lsphotos/image000238.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000671.jpg" title="Good times at the Rhythm and blues CX review in Evanston #lovestarfactoryteam #lsb photo credit to @theandyhudson" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Good times at the Rhythm and blues CX review in Evanston #lovestarfactoryteam #lsb photo credit to @theandyhudson</small>
-                           </div>
-                           <img src="../lsphotos/image000671.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
