--- a/instagram28.html
+++ b/instagram28.html
@@ -6,6 +6,127 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000708.jpg" title="#babysnub pushing limits. Big thanks to @jwild_photography for capturing this perfect moment...I don't think I'll ever post a better picture on the internets. (She rocked this hill without incident btw) #babyGnar #futurecyclist #lovestarfactoryteam #striderbikes" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#babysnub pushing limits. Big thanks to @jwild_photography for capturing this perfect moment...I don't think I'll ever post a better picture on the internets. (She rocked this hill without incident btw) #babyGnar #futurecyclist #lovestarfactoryteam #striderbikes</small>
+                           </div>
+                           <img src="../lsphotos/image000708.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000784.jpg" title="#Repost @elliotlovestarbicycles with @repostapp.
+・・・
+Bluffs of Lake Michigan. #fatbike #cycling #bikechi #bikepacking #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>fatbikee</h4>
+                              <small>#Repost @elliotlovestarbicycles with @repostapp.
+・・・
+Bluffs of Lake Michigan. #fatbike #cycling #bikechi #bikepacking #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000784.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000272.jpg" title="Bluffs of Lake Michigan. #fatbike #cycling #bikechi #bikepacking #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Bluffs of Lake Michigan. #fatbike #cycling #bikechi #bikepacking #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000272.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000709.jpg" title="Today was a rather sobering reminder that #cyclocross is really coming... #cx #moots #psychloX #cycling #bikechi #lovestarfactoryteam #HACCXE" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Today was a rather sobering reminder that #cyclocross is really coming... #cx #moots #psychloX #cycling #bikechi #lovestarfactoryteam #HACCXE</small>
+                           </div>
+                           <img src="../lsphotos/image000709.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000710.jpg" title="@casadewaggoner keeping it tight in the corners at the #HACCXE race today. #cyclocross #lovestarfactoryteam #cx #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>@casadewaggoner keeping it tight in the corners at the #HACCXE race today. #cyclocross #lovestarfactoryteam #cx #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000710.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000273.jpg" title="Don't ever back down... #fatbike #bikecommute #bicyclebag #cycling #cyclist #lovestarbicyclebags #bikechi #suburbangraffiti" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Don't ever back down... #fatbike #bikecommute #bicyclebag #cycling #cyclist #lovestarbicyclebags #bikechi #suburbangraffiti</small>
+                           </div>
+                           <img src="../lsphotos/image000273.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000711.jpg" title="Sunset Ride was a much needed mental and emotional break after the chaos of moving this past weekend. Living with two kids out of cardboard boxes in a new space required some serious big ring therapy. #cycling #cyclist #moots #psychloX #bikechi #lovestarfactoryteam #bicycle #sunset #dadlife" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sunset Ride was a much needed mental and emotional break after the chaos of moving this past weekend. Living with two kids out of cardboard boxes in a new space required some serious big ring therapy. #cycling #cyclist #moots #psychloX #bikechi #lovestarfactoryteam #bicycle #sunset #dadlife</small>
+                           </div>
+                           <img src="../lsphotos/image000711.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000712.jpg" title="Great shot by @theandyhudson from the #lovestarfactoryteam ride this morning. Good miles with great people." rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Great shot by @theandyhudson from the #lovestarfactoryteam ride this morning. Good miles with great people.</small>
+                           </div>
+                           <img src="../lsphotos/image000712.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000713.jpg" title="Moon's out... #cycling #moot #psychloX #bicycle #bikechi #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Moon's out... #cycling #moot #psychloX #bicycle #bikechi #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000713.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000274.jpg" title="Recalling every #zombie movie ever... #fatbike #adventurebike #bikechi #bikepacking #lovestarbicyclebags #cycling #bicycle #bikecommute" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -146,123 +267,6 @@ Another shot from my ride home tonight... #lovestarbicyclebags #fatbike #cycling
 Another shot from my ride home tonight... #lovestarbicyclebags #fatbike #cycling #bikecommute #bikepacking</small>
                            </div>
                            <img src="../lsphotos/image000280.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000281.jpg" title="Another shot from my ride home tonight... #lovestarbicyclebags #fatbike #cycling #bikecommute #bikepacking" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Another shot from my ride home tonight... #lovestarbicyclebags #fatbike #cycling #bikecommute #bikepacking</small>
-                           </div>
-                           <img src="../lsphotos/image000281.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000282.jpg" title="Bike commuting for the last 8+ years, I've developed pretty thick skin when it comes to driver road rage. But some days, it can still just set you off in a way that threatens to ruin a ride. One of the benefits of commuting via fat bike, is that you can turn off the route and explore less travelled pathways...today's exploring turned a seething road rage ride into a relaxed & scenic adventure. Life is too short to let others ruin the things you love...so here's to the road less travelled. #bikecommute #fatbike #bikechi #bicycle #cyclist #cycling #lovestarbicyclebags #lovestarfactoryteam #framebag #bikepacking #adventurebike" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Bike commuting for the last 8+ years, I've developed pretty thick skin when it comes to driver road rage. But some days, it can still just set you off in a way that threatens to ruin a ride. One of the benefits of commuting via fat bike, is that you can turn off the route and explore less travelled pathways...today's exploring turned a seething road rage ride into a relaxed & scenic adventure. Life is too short to let others ruin the things you love...so here's to the road less travelled. #bikecommute #fatbike #bikechi #bicycle #cyclist #cycling #lovestarbicyclebags #lovestarfactoryteam #framebag #bikepacking #adventurebike</small>
-                           </div>
-                           <img src="../lsphotos/image000282.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000283.jpg" title="Color matching on my commute today is on fleek. #ijustsaidfleek #cycling #lovestarfactoryteam #lovestarbicyclebags #fatbike #bikecommute #bikechi #bikepacking" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Color matching on my commute today is on fleek. #ijustsaidfleek #cycling #lovestarfactoryteam #lovestarbicyclebags #fatbike #bikecommute #bikechi #bikepacking</small>
-                           </div>
-                           <img src="../lsphotos/image000283.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000284.jpg" title="Fat bike family adventures. #fatbike #adventuredad #bikepacking #framebag #lovestarbicyclebags #thulechariot #lakemichigan #Chicago #cycling #cyclist" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Fat bike family adventures. #fatbike #adventuredad #bikepacking #framebag #lovestarbicyclebags #thulechariot #lakemichigan #Chicago #cycling #cyclist</small>
-                           </div>
-                           <img src="../lsphotos/image000284.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000285.jpg" title="Late night miles along Lake Michigan... #fatbike #lakemichigan #Chicago #cycling #cyclist #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Late night miles along Lake Michigan... #fatbike #lakemichigan #Chicago #cycling #cyclist #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000285.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000718.jpg" title="#cycling #ladiesoflovestar #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>oliviabeaty</h4>
-                              <small>#cycling #ladiesoflovestar #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000718.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000719.jpg" title="Big mountain riding. #babysnub #babyGnar #lovestarfactoryteam #cyclist #futurecyclist #littleshredder #bigsky #cycling" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Big mountain riding. #babysnub #babyGnar #lovestarfactoryteam #cyclist #futurecyclist #littleshredder #bigsky #cycling</small>
-                           </div>
-                           <img src="../lsphotos/image000719.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000720.jpg" title="Some of these roads...by themselves, are worth the trip to #bigsky #lovestarfactoryteam #cycling #cyclist" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Some of these roads...by themselves, are worth the trip to #bigsky #lovestarfactoryteam #cycling #cyclist</small>
-                           </div>
-                           <img src="../lsphotos/image000720.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000721.jpg" title="Road bikes off road. #bigsky #moots #psychloX #cycling #cyclist #gravelgrinder #gravel #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Road bikes off road. #bigsky #moots #psychloX #cycling #cyclist #gravelgrinder #gravel #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000721.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
