--- a/instagram4.html
+++ b/instagram4.html
@@ -6,6 +6,123 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000803.jpg" title="So many people say to me, &quot;Your son must be crazy to ride his bicycle all year round!&quot; Hmmmmmm? #cycling #cyclocross #bicycle #chicago #cyclocrosschicago #lovestar #lovestarbicycles #elliotlovestar #lovestarbicyclebags #bikebags #lovestarfactoryteam #diehard #outdoorsman #iadoremyson" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>So many people say to me, "Your son must be crazy to ride his bicycle all year round!" Hmmmmmm? #cycling #cyclocross #bicycle #chicago #cyclocrosschicago #lovestar #lovestarbicycles #elliotlovestar #lovestarbicyclebags #bikebags #lovestarfactoryteam #diehard #outdoorsman #iadoremyson</small>
+                           </div>
+                           <img src="../lsphotos/image000803.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000804.jpg" title="@agonz21 keeping it chill. #fatbike #cycling #bikepacking #bikewinter #icebike #lovestarbicyclebags #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>@agonz21 keeping it chill. #fatbike #cycling #bikepacking #bikewinter #icebike #lovestarbicyclebags #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000804.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000805.jpg" title="&quot;Stop, collaborate, and listen.&quot; First ever ride across a frozen lake. Thanks to @elliotlovestarbicycles for the photos and pep talk and bike #lovestarraceclub #fatbikenchill" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>agonz21</h4>
+                              <small>"Stop, collaborate, and listen." First ever ride across a frozen lake. Thanks to @elliotlovestarbicycles for the photos and pep talk and bike #lovestarraceclub #fatbikenchill</small>
+                           </div>
+                           <img src="../lsphotos/image000805.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000802.jpg" title="❄️🚲🌅 #fatbike #bikewinter #bikepacking #cycling #icebike #bicycle #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>❄️🚲🌅 #fatbike #bikewinter #bikepacking #cycling #icebike #bicycle #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000802.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000801.jpg" title="Beautiful sunrise ride this morning #lovestarraceclub #rentalbike #sunrise #barrierisland" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>Beautiful sunrise ride this morning #lovestarraceclub #rentalbike #sunrise #barrierisland</small>
+                           </div>
+                           <img src="../lsphotos/image000801.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000800.jpg" title="&quot;In the midst of winter, I found there was, within me, an invincible summer.&quot; #lovestarraceclub #cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>"In the midst of winter, I found there was, within me, an invincible summer." #lovestarraceclub #cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000800.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000799.jpg" title="Daddy / Daughter New Years night ride. #cycling #bicycle #pogies #nightride #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Daddy / Daughter New Years night ride. #cycling #bicycle #pogies #nightride #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000799.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000797.jpg" title="#best9of2016 It was a good year for bikes. #babySNUB mastering pedals... #babyARC riding in his first #cyclocross race... epic trip to Mt. Hood...lots of closer-to-home adventures with the kids...thousands of miles with my #lovestarfactoryteam friends. Gravel, snow, ice, heat and more. I had some great victories on the bike and some crushing defeats. Can't wait for 2017." rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#best9of2016 It was a good year for bikes. #babySNUB mastering pedals... #babyARC riding in his first #cyclocross race... epic trip to Mt. Hood...lots of closer-to-home adventures with the kids...thousands of miles with my #lovestarfactoryteam friends. Gravel, snow, ice, heat and more. I had some great victories on the bike and some crushing defeats. Can't wait for 2017.</small>
+                           </div>
+                           <img src="../lsphotos/image000797.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000798.jpg" title="Final ride of 2016 🚲 #festive500 #lovestarfactoryteam #cycling #bicycle #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Final ride of 2016 🚲 #festive500 #lovestarfactoryteam #cycling #bicycle #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000798.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000796.jpg" title="Riding on ice in the dark, finished my ride just as the sun was coming up. #festive500 #cycling #fatbike #bikepacking #bicycle #bikechi #lovestarbicyclebags" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -142,123 +259,6 @@
                               <small>18 below. Riding across a frozen lagoon at sunrise...adrenaline is a great way to warm up when you're cold 😳❄️🚲⛸#fatbike #bicycle #cycling #icebike #bikechi #bikepacking #lovestarbicyclebags</small>
                            </div>
                            <img src="../lsphotos/image000786.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000785.jpg" title="Gotta love cross. One of my finer moments captured right here. Photo credits @snowymountainphotography #melascx #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Gotta love cross. One of my finer moments captured right here. Photo credits @snowymountainphotography #melascx #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000785.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000783.jpg" title="Fat bike commute courtesy of @elliotlovestarbicycles #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>jim_ftw</h4>
-                              <small>Fat bike commute courtesy of @elliotlovestarbicycles #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000783.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000781.jpg" title="We're having a picnic. #winterbike #fatbike #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>We're having a picnic. #winterbike #fatbike #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000781.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000777.jpg" title="It's amazing how fat biking in the snow with good friends makes you feel like a little kid again #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>agonz21</h4>
-                              <small>It's amazing how fat biking in the snow with good friends makes you feel like a little kid again #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000777.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000776.jpg" title="Pre-dawn start, all smiles, cutting fresh tracks. #fatbike #cycling #bicycle #LovestarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Pre-dawn start, all smiles, cutting fresh tracks. #fatbike #cycling #bicycle #LovestarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000776.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000780.jpg" title="Fatbike group ride! #cycling #bicycle #fatbike #LovestarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Fatbike group ride! #cycling #bicycle #fatbike #LovestarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000780.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000779.jpg" title="#lovestarraceclub about to go have some lagoon adventures. Winter just got a lot more fun! #fatbike #winterbike #borealisecho" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>#lovestarraceclub about to go have some lagoon adventures. Winter just got a lot more fun! #fatbike #winterbike #borealisecho</small>
-                           </div>
-                           <img src="../lsphotos/image000779.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000782.jpg" title="Skokio drift #snow #mtb #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>oliviabeaty</h4>
-                              <small>Skokio drift #snow #mtb #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000782.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000778.jpg" title="Snow biking through fresh powder is a great way to start your day. #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>jim_ftw</h4>
-                              <small>Snow biking through fresh powder is a great way to start your day. #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000778.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
