--- a/instagram41.html
+++ b/instagram41.html
@@ -6,6 +6,123 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000481.jpg" title="Putting some finishing touches on a set of Lovestar bags for a customer. Grey & Black with yellow interiors, this saddle pack / fuel bag combo makes a great do-anything bag combo. #handmade #cycling #bikechi #lovestarbicyclebags #bikepacking" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Putting some finishing touches on a set of Lovestar bags for a customer. Grey & Black with yellow interiors, this saddle pack / fuel bag combo makes a great do-anything bag combo. #handmade #cycling #bikechi #lovestarbicyclebags #bikepacking</small>
+                           </div>
+                           <img src="../lsphotos/image000481.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000482.jpg" title="Lovestar Saddle Pack & Fuel Bag combo in progress for a customer. The Grey with black trim & yellow interior is really poppin' #lovestarbicyclebags #cycling #bikepacking #bikechi #handmade" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Lovestar Saddle Pack & Fuel Bag combo in progress for a customer. The Grey with black trim & yellow interior is really poppin' #lovestarbicyclebags #cycling #bikepacking #bikechi #handmade</small>
+                           </div>
+                           <img src="../lsphotos/image000482.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000483.jpg" title="Long daddy/daughter ride today. He worn her pink jersey and had a post ride biscotti. #giro #futurecyclist #cycling #bikechi #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Long daddy/daughter ride today. He worn her pink jersey and had a post ride biscotti. #giro #futurecyclist #cycling #bikechi #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000483.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000484.jpg" title="Worked at Bike the Drive this morning. My day stared around 2:30am...saw a beautiful sunrise over Lake Michigan, got to ride a small section of a car-free Lake Shore Drive, saw some killer fat bikes from @wisemanframeworks and helped a lot of people get out on bikes today. All in all not a bad way to spend a day. #bikethedrive #bikechi #cycling #lovestarbicyclebags #chicago #lakeshoredrive #carfree" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Worked at Bike the Drive this morning. My day stared around 2:30am...saw a beautiful sunrise over Lake Michigan, got to ride a small section of a car-free Lake Shore Drive, saw some killer fat bikes from @wisemanframeworks and helped a lot of people get out on bikes today. All in all not a bad way to spend a day. #bikethedrive #bikechi #cycling #lovestarbicyclebags #chicago #lakeshoredrive #carfree</small>
+                           </div>
+                           <img src="../lsphotos/image000484.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000485.jpg" title="Found some virgin bike trail pavement today. #bikechi #cycling #lovestarbicyclebags #summer #mcclorypath" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Found some virgin bike trail pavement today. #bikechi #cycling #lovestarbicyclebags #summer #mcclorypath</small>
+                           </div>
+                           <img src="../lsphotos/image000485.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000486.jpg" title="Daddy / daughter recovery ride today. #bikechi #cycling #futurecyclist #lovestarbicyclebags #moots #psyhlox" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Daddy / daughter recovery ride today. #bikechi #cycling #futurecyclist #lovestarbicyclebags #moots #psyhlox</small>
+                           </div>
+                           <img src="../lsphotos/image000486.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000487.jpg" title="Almanzo 100 2014. We came, we saw, we crushed gravel. #almanzorv #almanzo100 #fixitsticks #racedots #gravelgrinder #gravel #lovestarbicyclebags #moots" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Almanzo 100 2014. We came, we saw, we crushed gravel. #almanzorv #almanzo100 #fixitsticks #racedots #gravelgrinder #gravel #lovestarbicyclebags #moots</small>
+                           </div>
+                           <img src="../lsphotos/image000487.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000488.jpg" title="Successful Almanzo 100! #almanzorv #almanzo100 #gravel #gravelgrinder #lovestarbicyclebags #cycling #moots" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Successful Almanzo 100! #almanzorv #almanzo100 #gravel #gravelgrinder #lovestarbicyclebags #cycling #moots</small>
+                           </div>
+                           <img src="../lsphotos/image000488.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000489.jpg" title="Blue & white Lovestar Saddle Pack for a team mate. #handmade #lovestarbicyclebags #cycling #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Blue & white Lovestar Saddle Pack for a team mate. #handmade #lovestarbicyclebags #cycling #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000489.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000490.jpg" title="Chilly rides deserve warm drinks. #lovestarbicyclebags #airattack #cycling #bikechi #espresso" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -142,123 +259,6 @@
                               <small>Lots of solo riding today. Lovestar ride wallet & double espresso action shot. #bikechi #lovestarbicyclebags #cycling #coffedoping</small>
                            </div>
                            <img src="../lsphotos/image000500.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000501.jpg" title="Sometimes a quiet solo ride home with some unplanned stops is best. #bikechi #cycling #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Sometimes a quiet solo ride home with some unplanned stops is best. #bikechi #cycling #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000501.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000502.jpg" title="Designing Lovestar team kits in MS paint... #lovestarbicyclebags #imaynotbefastbutilookgood" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Designing Lovestar team kits in MS paint... #lovestarbicyclebags #imaynotbefastbutilookgood</small>
-                           </div>
-                           <img src="../lsphotos/image000502.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000503.jpg" title="Waffle Ride! 60 miles, 1 tricky flat, 4 killer waffles. #delbescorner #cycling #bikechi #bikeevanston #lovestarbicyclebags #waffles" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Waffle Ride! 60 miles, 1 tricky flat, 4 killer waffles. #delbescorner #cycling #bikechi #bikeevanston #lovestarbicyclebags #waffles</small>
-                           </div>
-                           <img src="../lsphotos/image000503.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000504.jpg" title="New tires...#gravelgrinder #clement #moots #lovestarbicyclebags #psychloX" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>New tires...#gravelgrinder #clement #moots #lovestarbicyclebags #psychloX</small>
-                           </div>
-                           <img src="../lsphotos/image000504.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000505.jpg" title="Ride wallet prototype 2.0 #cycling #bikechi #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Ride wallet prototype 2.0 #cycling #bikechi #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000505.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000506.jpg" title="Finished up a custom Lovestar frame bag for a Chicago customer. Hi-vis orange XPac sidewalls, waterproof zippers, dark orange Cordura edges, yellow interior. #bikepacking #bikechi #cycling #handmade #framebag #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Finished up a custom Lovestar frame bag for a Chicago customer. Hi-vis orange XPac sidewalls, waterproof zippers, dark orange Cordura edges, yellow interior. #bikepacking #bikechi #cycling #handmade #framebag #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000506.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000507.jpg" title="Time to call it a night...made some good progress on this custom Lovestar Frame bag. #handmade #cycling #bikepacking #bikechi #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Time to call it a night...made some good progress on this custom Lovestar Frame bag. #handmade #cycling #bikepacking #bikechi #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000507.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000508.jpg" title="Finishing up a Black & Pink Lovestar Saddle Pack tonight. #handmadeisbetter #handmade #cycling #lovestarbicyclebags #bikechi #bikepacking" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Finishing up a Black & Pink Lovestar Saddle Pack tonight. #handmadeisbetter #handmade #cycling #lovestarbicyclebags #bikechi #bikepacking</small>
-                           </div>
-                           <img src="../lsphotos/image000508.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000509.jpg" title="Best way to recover from a hard ride...go for a ride #cycling #bikechi  #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Best way to recover from a hard ride...go for a ride #cycling #bikechi  #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000509.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
