--- a/instagram7.html
+++ b/instagram7.html
@@ -6,6 +6,123 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000088.jpg" title="Blacked out #LovestarBicycleBags SaddlePack finished up during the kids naps today. #handmade #cycling #bicycle #bicyclebag #bikepacking #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Blacked out #LovestarBicycleBags SaddlePack finished up during the kids naps today. #handmade #cycling #bicycle #bicyclebag #bikepacking #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000088.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000019.jpg" title="Post race bike cleaning time. #cycling #cyclocross #cx #bicycle #LovestarRaceClub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Post race bike cleaning time. #cycling #cyclocross #cx #bicycle #LovestarRaceClub</small>
+                           </div>
+                           <img src="../lsphotos/image000019.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000541.jpg" title="Taking the top spot for riders under two 😊 #cyclocrosschicago #cycling #firstrace #adorablegrandson #bike #lovestarfactoryteam #youngestrider #thiskidlovestoride #happyday #fun" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>Taking the top spot for riders under two 😊 #cyclocrosschicago #cycling #firstrace #adorablegrandson #bike #lovestarfactoryteam #youngestrider #thiskidlovestoride #happyday #fun</small>
+                           </div>
+                           <img src="../lsphotos/image000541.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000089.jpg" title="Great race today Lovestar Factory Team!!! #cyclocrosschicago #cycling #lovestarfactoryteam #cyclocross #lovestarbicyclebags #lovestar" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>Great race today Lovestar Factory Team!!! #cyclocrosschicago #cycling #lovestarfactoryteam #cyclocross #lovestarbicyclebags #lovestar</small>
+                           </div>
+                           <img src="../lsphotos/image000089.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000090.jpg" title="First race. Done. So happy. So proud. #firstrace #cyclocrosschicago #bike #lovestarfactoryteam #youngest #elliotlovestarbicycles #racingteam #lovestarbicyclebags #prouddaddy #thislittleguylovestoride" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>First race. Done. So happy. So proud. #firstrace #cyclocrosschicago #bike #lovestarfactoryteam #youngest #elliotlovestarbicycles #racingteam #lovestarbicyclebags #prouddaddy #thislittleguylovestoride</small>
+                           </div>
+                           <img src="../lsphotos/image000090.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000091.jpg" title="First race. Puddles were the highlight! #firstrace #cyclocrosschicago #lovestarfactoryteam #youngestrider #cycling #bike #elliotlovestarbicycle #lovestarbicyclebags #dadisproud" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>First race. Puddles were the highlight! #firstrace #cyclocrosschicago #lovestarfactoryteam #youngestrider #cycling #bike #elliotlovestarbicycle #lovestarbicyclebags #dadisproud</small>
+                           </div>
+                           <img src="../lsphotos/image000091.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000021.jpg" title="First CX race in the books! Complete with mud and everything...great job Riley! #lovestarraceclub #cyclocross" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>First CX race in the books! Complete with mud and everything...great job Riley! #lovestarraceclub #cyclocross</small>
+                           </div>
+                           <img src="../lsphotos/image000021.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000022.jpg" title="Congrats to Rob on his podium finish! #lovestarraceclub #numberone" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>oliviabeaty</h4>
+                              <small>Congrats to Rob on his podium finish! #lovestarraceclub #numberone</small>
+                           </div>
+                           <img src="../lsphotos/image000022.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000023.jpg" title="First cross race. #cyclocross #cx #cycling #bicycle #LovestarRaceClub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>First cross race. #cyclocross #cx #cycling #bicycle #LovestarRaceClub</small>
+                           </div>
+                           <img src="../lsphotos/image000023.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000024.jpg" title="2nd podium of the day! #BabyARC taking the top spot in the kids under 2yo race 😜 #cyclocross #cx #bicycle #cycling #striderbikes #LovestarRaceClub" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -142,123 +259,6 @@
                               <small>Cold fall ride calls for coffee inside. #lovestarraceclub</small>
                            </div>
                            <img src="../lsphotos/image000031.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000032.jpg" title="New Lovestar Race Club cycling caps! #capsnothats #cycling #bicycle #champsys #LovestarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>New Lovestar Race Club cycling caps! #capsnothats #cycling #bicycle #champsys #LovestarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000032.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000033.jpg" title="New club kits comin'atchya #LovestarRaceClub #cycling #bicycle #champsys #kitsonfleek" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>New club kits comin'atchya #LovestarRaceClub #cycling #bicycle #champsys #kitsonfleek</small>
-                           </div>
-                           <img src="../lsphotos/image000033.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000034.jpg" title="Focused on his Focus. #focusbikes #lovestarraceclub #carpentercx" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>oliviabeaty</h4>
-                              <small>Focused on his Focus. #focusbikes #lovestarraceclub #carpentercx</small>
-                           </div>
-                           <img src="../lsphotos/image000034.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000035.jpg" title="Gritty & grey this morning for today's ride. Definitely feeling like cyclocross weather. #cycling #bicycle #cyclocross #cx #bikechi #LovestarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Gritty & grey this morning for today's ride. Definitely feeling like cyclocross weather. #cycling #bicycle #cyclocross #cx #bikechi #LovestarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000035.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000036.jpg" title="Fast ride North this morning to meet up with  my Dad for a scenic ride home. #bicycle #cycling #bikechi #LovestarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Fast ride North this morning to meet up with  my Dad for a scenic ride home. #bicycle #cycling #bikechi #LovestarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000036.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000094.jpg" title="Racing stripes on a custom #LovestarBicycleBags SaddlePack. #handmade #bicyclebag #cycling #bicycle #bikechi #bikepacking #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Racing stripes on a custom #LovestarBicycleBags SaddlePack. #handmade #bicyclebag #cycling #bicycle #bikechi #bikepacking #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000094.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000037.jpg" title="Sunrise miles & smiles. #LovestarRaceClub #cycling #bicycle #bikechi #coffeeride" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Sunrise miles & smiles. #LovestarRaceClub #cycling #bicycle #bikechi #coffeeride</small>
-                           </div>
-                           <img src="../lsphotos/image000037.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000095.jpg" title="Custom #LovestarBicycleBags top tube bag. #bikepacking #cycling #bicyclebag #bicycle #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Custom #LovestarBicycleBags top tube bag. #bikepacking #cycling #bicyclebag #bicycle #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000095.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000096.jpg" title="Custom #LoveStarBicycleBags top tube bag in Black & Pink. #handmade #bicyclebag #cycling #bikepacking #bicycle #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Custom #LoveStarBicycleBags top tube bag in Black & Pink. #handmade #bicyclebag #cycling #bikepacking #bicycle #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000096.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
