--- a/index.html
+++ b/index.html
@@ -173,6 +173,125 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000881.jpg" title="Just a few of my awesome teammates. We call this The Phases of the Smiles. Good times at #barryroubaix #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>agonz21</h4>
+                              <small>Just a few of my awesome teammates. We call this The Phases of the Smiles. Good times at #barryroubaix #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000881.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000879.jpg" title="So much grit. #lovestarraceclub #gravelgrinder #barryroubaix" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>jim_ftw</h4>
+                              <small>So much grit. #lovestarraceclub #gravelgrinder #barryroubaix</small>
+                           </div>
+                           <img src="../lsphotos/image000879.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000877.jpg" title="A sampling of @barryroubaix1 carnage on #lovestarbicyclebags SaddlePacks. #gravel #gravelgrinder #lovestarraceclub #cycling #bicycle" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>A sampling of @barryroubaix1 carnage on #lovestarbicyclebags SaddlePacks. #gravel #gravelgrinder #lovestarraceclub #cycling #bicycle</small>
+                           </div>
+                           <img src="../lsphotos/image000877.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000882.jpg" title="Forgot to take a photo after the race when I was still wet, dirty, and freezing so you get this instead. Barry Roubaix was epic this year: cold, soaking rains, wind, you name it. A real spring classic! #lovestarraceclub #barryroubaix #superx #barryroubaix2017" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>Forgot to take a photo after the race when I was still wet, dirty, and freezing so you get this instead. Barry Roubaix was epic this year: cold, soaking rains, wind, you name it. A real spring classic! #lovestarraceclub #barryroubaix #superx #barryroubaix2017</small>
+                           </div>
+                           <img src="../lsphotos/image000882.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000880.jpg" title="#barryroubaix2017 #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>oliviabeaty</h4>
+                              <small>#barryroubaix2017 #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000880.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000883.jpg" title="‪Most often heard phrases at the 2017 Barry-Roubaix: &quot;Peanut butter,&quot; &quot;My goal this year is just to finish,&quot; and &quot;I can't believe I paid to do this.&quot;‬ #Brr #Rain #Misery #Glory #LovestarRaceClub #BarryRoubaix" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>‪Most often heard phrases at the 2017 Barry-Roubaix: "Peanut butter," "My goal this year is just to finish," and "I can't believe I paid to do this."‬ #Brr #Rain #Misery #Glory #LovestarRaceClub #BarryRoubaix</small>
+                           </div>
+                           <img src="../lsphotos/image000883.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000884.jpg" title="Lovestar Race Club Barry Roubaix Crew! #cycling #gravelgrinder #gravel #lovestarraceclub #barryroubaix #smilesformiles" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Lovestar Race Club Barry Roubaix Crew! #cycling #gravelgrinder #gravel #lovestarraceclub #barryroubaix #smilesformiles</small>
+                           </div>
+                           <img src="../lsphotos/image000884.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000878.jpg" title="Great day for a race. My favorite kind of biking weather: cold, rainy, slightly windy. 
+#barryroubaix2017 #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>oliviabeaty</h4>
+                              <small>Great day for a race. My favorite kind of biking weather: cold, rainy, slightly windy. 
+#barryroubaix2017 #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000878.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000885.jpg" title="Your team has its pre-race preparations ... and we have ours. #lovestarraceclub @barryroubaix1 #gravel #gravelgrinder #barryroubaix #cycling #cheesesteaktornado" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Your team has its pre-race preparations ... and we have ours. #lovestarraceclub @barryroubaix1 #gravel #gravelgrinder #barryroubaix #cycling #cheesesteaktornado</small>
+                           </div>
+                           <img src="../lsphotos/image000885.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000874.jpg" title="Shenanigans. Stop #2 on the #lovestarraceclub #barryroubaix2017 tour." rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>oliviabeaty</h4>
@@ -311,123 +430,6 @@
                               <small>Getting my gear dialed in with the Last few shake down rides before #barryroubaix ... 700x40 tubless Flintridge Pros for those of you who are curious. #cycling #bicycle #cyclocross #gravelbike #gravel #gravelgrinder #bikechi #puremichigan #ridecannondale #lovestarraceclub</small>
                            </div>
                            <img src="../lsphotos/image000861.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000857.jpg" title="Hills and thrills - Wisconsin Barry prep was very telling... #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>oliviabeaty</h4>
-                              <small>Hills and thrills - Wisconsin Barry prep was very telling... #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000857.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000862.jpg" title="A couple more shots from this morning. #lovestarraceclub #fatbike #borealisecho #45nrth #flowbeist" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>A couple more shots from this morning. #lovestarraceclub #fatbike #borealisecho #45nrth #flowbeist</small>
-                           </div>
-                           <img src="../lsphotos/image000862.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000863.jpg" title="@elliotlovestarbicycles going the distance to get the shot he wants. #lovestarraceclub #fatbike" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>@elliotlovestarbicycles going the distance to get the shot he wants. #lovestarraceclub #fatbike</small>
-                           </div>
-                           <img src="../lsphotos/image000863.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000856.jpg" title="Trails and Sunshine. #snowbike #bikechi #bikewinter #bicycle #cycling #fatbike #bikepacking #lovestarbicyclebags #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Trails and Sunshine. #snowbike #bikechi #bikewinter #bicycle #cycling #fatbike #bikepacking #lovestarbicyclebags #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000856.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000864.jpg" title="Elliot shredding, deer peeping, fatty resting, and Birthday Boy Posing on Dave's Bday Lagoons Ride #lovestarraceclub #stillinhis30s" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>agonz21</h4>
-                              <small>Elliot shredding, deer peeping, fatty resting, and Birthday Boy Posing on Dave's Bday Lagoons Ride #lovestarraceclub #stillinhis30s</small>
-                           </div>
-                           <img src="../lsphotos/image000864.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000865.jpg" title="@agonz21 shredding this morning. #lovestarraceclub #fatbike #cycling #bicycle #bikewinter #bikechi #snowbike" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>@agonz21 shredding this morning. #lovestarraceclub #fatbike #cycling #bicycle #bikewinter #bikechi #snowbike</small>
-                           </div>
-                           <img src="../lsphotos/image000865.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000866.jpg" title="Breaking trail through 7-8&quot; of fresh powder before dawn this morning. Snap credit to @agonz21 #adventurebike #bikewinter #bicycle #cycling #fatbike #bikepacking #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Breaking trail through 7-8" of fresh powder before dawn this morning. Snap credit to @agonz21 #adventurebike #bikewinter #bicycle #cycling #fatbike #bikepacking #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000866.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000867.jpg" title="Me three... Fun making fresh tracks with my compadres gordos #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>agonz21</h4>
-                              <small>Me three... Fun making fresh tracks with my compadres gordos #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000867.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000868.jpg" title="We got snow! It was way too short but had a great time with @elliotlovestarbicycles and @agonz21 on the trails this morning. #lovestarraceclub #fatbike #borealisecho" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>We got snow! It was way too short but had a great time with @elliotlovestarbicycles and @agonz21 on the trails this morning. #lovestarraceclub #fatbike #borealisecho</small>
-                           </div>
-                           <img src="../lsphotos/image000868.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
