--- a/instagram10.html
+++ b/instagram10.html
@@ -6,6 +6,123 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000064.jpg" title="Definitely cleared that barrier! #lovestarraceclub #cxrelay #crossishere" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>Definitely cleared that barrier! #lovestarraceclub #cxrelay #crossishere</small>
+                           </div>
+                           <img src="../lsphotos/image000064.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000065.jpg" title="Somebody is loving his new bike! #jnbs #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>Somebody is loving his new bike! #jnbs #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000065.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000066.jpg" title="Great recovery ride with the Harriff Boyz. Even got to ride through The Funnel. #lovestarraceclub #funnel" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>agonz21</h4>
+                              <small>Great recovery ride with the Harriff Boyz. Even got to ride through The Funnel. #lovestarraceclub #funnel</small>
+                           </div>
+                           <img src="../lsphotos/image000066.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000067.jpg" title="Beautiful morning with the #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>Beautiful morning with the #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000067.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000102.jpg" title="Celebratory Alfredo Mac & bombers in the shadow of the mountain. #mthood #bikepacking #lovestarbicyclebags #bikecamping" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Celebratory Alfredo Mac & bombers in the shadow of the mountain. #mthood #bikepacking #lovestarbicyclebags #bikecamping</small>
+                           </div>
+                           <img src="../lsphotos/image000102.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000103.jpg" title="Lolo Pass Hut. #mthood #bikepacking #bikecamping #lovestarbicyclebags #fatbike #cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Lolo Pass Hut. #mthood #bikepacking #bikecamping #lovestarbicyclebags #fatbike #cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000103.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000104.jpg" title="Always be strava-ing #bikepacking #bikecamping #mthood #lovestarbicyclebags #strava #kom" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Always be strava-ing #bikepacking #bikecamping #mthood #lovestarbicyclebags #strava #kom</small>
+                           </div>
+                           <img src="../lsphotos/image000104.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000105.jpg" title="Trillium Lake #mtb #fatbike #bikepacking #bikecanping #mthood #trilliumlake #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Trillium Lake #mtb #fatbike #bikepacking #bikecanping #mthood #trilliumlake #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000105.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000070.jpg" title="Day 3, Mt Hood loop. Taking some time to chill and enjoy the scenery. Such a beautiful place... #lovestarraceclub #trilliumlake" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>agonz21</h4>
+                              <small>Day 3, Mt Hood loop. Taking some time to chill and enjoy the scenery. Such a beautiful place... #lovestarraceclub #trilliumlake</small>
+                           </div>
+                           <img src="../lsphotos/image000070.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000071.jpg" title="Why drive when you can ride? #lovestarraceclub #cycling" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>theandyhudson</h4>
@@ -142,123 +259,6 @@
                               <small>Added a couple of top tube bags to my personal setup in preparation for Mt. Hood. #Handmade #lovestarbicyclebags #Bikepacking #bicycle #fatbike #adventurebike #bikechi</small>
                            </div>
                            <img src="../lsphotos/image000113.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000084.jpg" title="T-minus 5 days until Mt. Hood #Bikepacking Adventure...final gear layout has begun. #bicycle #fatbike #lovestarbicyclebags #adventurebike" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>T-minus 5 days until Mt. Hood #Bikepacking Adventure...final gear layout has begun. #bicycle #fatbike #lovestarbicyclebags #adventurebike</small>
-                           </div>
-                           <img src="../lsphotos/image000084.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000077.jpg" title="Sunrise Coffee Ride #bicycle #cycling #bikechi #LovestarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Sunrise Coffee Ride #bicycle #cycling #bikechi #LovestarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000077.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000543.jpg" title="#ssct #lovestarfactoryteam #lsb" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>oliviabeaty</h4>
-                              <small>#ssct #lovestarfactoryteam #lsb</small>
-                           </div>
-                           <img src="../lsphotos/image000543.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000544.jpg" title="This morning's ride was a blast. #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>theandyhudson</h4>
-                              <small>This morning's ride was a blast. #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000544.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000078.jpg" title="#crossiscoming kind of morning. #cycling #cx #cyclocross #LovestarRaceClub #bicycle #moots" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#crossiscoming kind of morning. #cycling #cx #cyclocross #LovestarRaceClub #bicycle #moots</small>
-                           </div>
-                           <img src="../lsphotos/image000078.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000114.jpg" title="Tubulars have started to make their annual appearances.... #crossiscoming #cx #cyclocross #moots #psychlox #bicycle #cycling #bikechi #baaw #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Tubulars have started to make their annual appearances.... #crossiscoming #cx #cyclocross #moots #psychlox #bicycle #cycling #bikechi #baaw #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000114.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000545.jpg" title="Trying some new things/upgrades on the supersix. #lovestarfactoryteam #stagespower #vittoriatires #supersixevo" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Trying some new things/upgrades on the supersix. #lovestarfactoryteam #stagespower #vittoriatires #supersixevo</small>
-                           </div>
-                           <img src="../lsphotos/image000545.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000546.jpg" title="Ride report: Dark...Group...FAST!...Boom...Solo...Sunrise...Coffee...friends!...ride......phew. #cycling #bicycle #bikechi #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Ride report: Dark...Group...FAST!...Boom...Solo...Sunrise...Coffee...friends!...ride......phew. #cycling #bicycle #bikechi #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000546.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000079.jpg" title="#crossiscoming skillz&drillz team rides have begun. #cycling #bicycle #cx #bikechi #LovestarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#crossiscoming skillz&drillz team rides have begun. #cycling #bicycle #cx #bikechi #LovestarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000079.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
