--- a/instagram11.html
+++ b/instagram11.html
@@ -6,6 +6,123 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000084.jpg" title="T-minus 5 days until Mt. Hood #Bikepacking Adventure...final gear layout has begun. #bicycle #fatbike #lovestarbicyclebags #adventurebike" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>T-minus 5 days until Mt. Hood #Bikepacking Adventure...final gear layout has begun. #bicycle #fatbike #lovestarbicyclebags #adventurebike</small>
+                           </div>
+                           <img src="../lsphotos/image000084.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000077.jpg" title="Sunrise Coffee Ride #bicycle #cycling #bikechi #LovestarRaceClub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sunrise Coffee Ride #bicycle #cycling #bikechi #LovestarRaceClub</small>
+                           </div>
+                           <img src="../lsphotos/image000077.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000543.jpg" title="#ssct #lovestarfactoryteam #lsb" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>oliviabeaty</h4>
+                              <small>#ssct #lovestarfactoryteam #lsb</small>
+                           </div>
+                           <img src="../lsphotos/image000543.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000544.jpg" title="This morning's ride was a blast. #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>This morning's ride was a blast. #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000544.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000078.jpg" title="#crossiscoming kind of morning. #cycling #cx #cyclocross #LovestarRaceClub #bicycle #moots" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#crossiscoming kind of morning. #cycling #cx #cyclocross #LovestarRaceClub #bicycle #moots</small>
+                           </div>
+                           <img src="../lsphotos/image000078.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000114.jpg" title="Tubulars have started to make their annual appearances.... #crossiscoming #cx #cyclocross #moots #psychlox #bicycle #cycling #bikechi #baaw #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Tubulars have started to make their annual appearances.... #crossiscoming #cx #cyclocross #moots #psychlox #bicycle #cycling #bikechi #baaw #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000114.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000545.jpg" title="Trying some new things/upgrades on the supersix. #lovestarfactoryteam #stagespower #vittoriatires #supersixevo" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>Trying some new things/upgrades on the supersix. #lovestarfactoryteam #stagespower #vittoriatires #supersixevo</small>
+                           </div>
+                           <img src="../lsphotos/image000545.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000546.jpg" title="Ride report: Dark...Group...FAST!...Boom...Solo...Sunrise...Coffee...friends!...ride......phew. #cycling #bicycle #bikechi #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Ride report: Dark...Group...FAST!...Boom...Solo...Sunrise...Coffee...friends!...ride......phew. #cycling #bicycle #bikechi #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000546.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000079.jpg" title="#crossiscoming skillz&drillz team rides have begun. #cycling #bicycle #cx #bikechi #LovestarRaceClub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#crossiscoming skillz&drillz team rides have begun. #cycling #bicycle #cx #bikechi #LovestarRaceClub</small>
+                           </div>
+                           <img src="../lsphotos/image000079.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000547.jpg" title="Felt great to ride on my streets again this morning. #lovestarfactoryteam #cycling" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>theandyhudson</h4>
@@ -142,123 +259,6 @@
                               <small>From today's ride. #mocabang #lovestarfactoryteam</small>
                            </div>
                            <img src="../lsphotos/image000538.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000080.jpg" title="Smiles for miles on this morning's sunrise team ride. #LovestarRaceClub #bicycle #bikechi #cycling" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Smiles for miles on this morning's sunrise team ride. #LovestarRaceClub #bicycle #bikechi #cycling</small>
-                           </div>
-                           <img src="../lsphotos/image000080.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000118.jpg" title="Same stealthy bag has a blaze orange Cordura interior. #lovestarbicyclebags #handmade #bicycle #cycling #bicyclebag #cordura #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Same stealthy bag has a blaze orange Cordura interior. #lovestarbicyclebags #handmade #bicycle #cycling #bicyclebag #cordura #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000118.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000119.jpg" title="Finished up a stealthy #lovestarbicyclebags SaddlePack this morning. #handmade #bicycle #cycling #bicyclebag #cordura #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Finished up a stealthy #lovestarbicyclebags SaddlePack this morning. #handmade #bicycle #cycling #bicyclebag #cordura #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000119.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000553.jpg" title="#lovestarfactoryteam #mocabang" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>theandyhudson</h4>
-                              <small>#lovestarfactoryteam #mocabang</small>
-                           </div>
-                           <img src="../lsphotos/image000553.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000083.jpg" title="New mini-bike storage systems at #lovestarbicyclebags H.Q." rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>New mini-bike storage systems at #lovestarbicyclebags H.Q.</small>
-                           </div>
-                           <img src="../lsphotos/image000083.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000554.jpg" title="#cycling #bicycle #moots #bikechi #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#cycling #bicycle #moots #bikechi #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000554.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000120.jpg" title="Nothing like an early morning Estate-ly ride with my boys. #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>agonz21</h4>
-                              <small>Nothing like an early morning Estate-ly ride with my boys. #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000120.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000555.jpg" title="Crushers. #cycling #bicycle #bikechi #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Crushers. #cycling #bicycle #bikechi #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000555.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000556.jpg" title="Pair of Parlees #lovestarfactoryteam #cycling #bikechi #bicycle #myparlee" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Pair of Parlees #lovestarfactoryteam #cycling #bikechi #bicycle #myparlee</small>
-                           </div>
-                           <img src="../lsphotos/image000556.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
