--- a/instagram17.html
+++ b/instagram17.html
@@ -6,6 +6,123 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000151.jpg" title="Nothing says Spring like a fresh dusting of snow. #cycling #bikechi #moots #psychloX #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Nothing says Spring like a fresh dusting of snow. #cycling #bikechi #moots #psychloX #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000151.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000152.jpg" title="Good Friday sunrise ride. #cycling #bikechi #moots #psychloX #cannondale #superX #lovestarfactoryteam #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Good Friday sunrise ride. #cycling #bikechi #moots #psychloX #cannondale #superX #lovestarfactoryteam #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000152.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000153.jpg" title="Spring is supposedly here in #Chicago...complete with sleet, snow & freezing rain. Had to mount up some mudguards for tomorrow's ride... #cycling #bikechi #moots #psychloX #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Spring is supposedly here in #Chicago...complete with sleet, snow & freezing rain. Had to mount up some mudguards for tomorrow's ride... #cycling #bikechi #moots #psychloX #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000153.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000154.jpg" title="Chicagoland landmarks. #bikechi #moots #psychloX #bicycle #cycling #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Chicagoland landmarks. #bikechi #moots #psychloX #bicycle #cycling #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000154.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000615.jpg" title="Beautiful day for a recovery ride to the Fort. #lovestarfactoryteam #myparlee" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>agonz21</h4>
+                              <small>Beautiful day for a recovery ride to the Fort. #lovestarfactoryteam #myparlee</small>
+                           </div>
+                           <img src="../lsphotos/image000615.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000155.jpg" title="Chilly Sunny Spring ride. #cycling #lovestarbicyclebags #bicycle #moots #psychloX" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Chilly Sunny Spring ride. #cycling #lovestarbicyclebags #bicycle #moots #psychloX</small>
+                           </div>
+                           <img src="../lsphotos/image000155.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000616.jpg" title="The #lovestarfactoryteam in Racine, WI from yesterday's monster ride." rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>The #lovestarfactoryteam in Racine, WI from yesterday's monster ride.</small>
+                           </div>
+                           <img src="../lsphotos/image000616.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000617.jpg" title="Riding with great people is the best. Great job y'all #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>agonz21</h4>
+                              <small>Riding with great people is the best. Great job y'all #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000617.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000618.jpg" title="Today. #cycling #parlee #scottbikes #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>Today. #cycling #parlee #scottbikes #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000618.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000619.jpg" title="#babyARC wasn't quite as sure about this cobbles thing as his sister... #cobbles #cycling #futurecyclist #thulechariot #lovestarfactoryteam" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -142,123 +259,6 @@
                               <small>Gonna try getting #ontherivet with the #moots this gravel season. #gravelgrinder #gravel #bicycle #cycling #psychloX #lovestarbicyclebags</small>
                            </div>
                            <img src="../lsphotos/image000162.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000163.jpg" title="Huge cargo capacity, and a flashy peacock blue interior. #handmade #lovestarbicyclebags #bicyclebag #bicycle #cycling" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Huge cargo capacity, and a flashy peacock blue interior. #handmade #lovestarbicyclebags #bicyclebag #bicycle #cycling</small>
-                           </div>
-                           <img src="../lsphotos/image000163.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000164.jpg" title="Finishing up a custom roll top porteur rack bag. Customer designed the bag, I had the privilege of making it. #handmade #lovestarbicyclebags #cycling #cordura #bicycle #bicyclebag" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Finishing up a custom roll top porteur rack bag. Customer designed the bag, I had the privilege of making it. #handmade #lovestarbicyclebags #cycling #cordura #bicycle #bicyclebag</small>
-                           </div>
-                           <img src="../lsphotos/image000164.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000165.jpg" title="Exploring. #adventuredad #futurecyclist #clearybikes #cycling #bicycle #babySNUB #babyARC #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Exploring. #adventuredad #futurecyclist #clearybikes #cycling #bicycle #babySNUB #babyARC #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000165.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000166.jpg" title="60 degrees! Bike washing marathon complete with sun drying service. #bikemechanic #lovestarbicyclebags #cycling" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>60 degrees! Bike washing marathon complete with sun drying service. #bikemechanic #lovestarbicyclebags #cycling</small>
-                           </div>
-                           <img src="../lsphotos/image000166.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000167.jpg" title="So proud to see my son as well as his custom bike bag company featured in the 2016 Novara Catalog!  #lovestarbicyclebags #lovestar #custombicyclebags #cyclingchicago #lovestarcyclingteam #cycling #cyclocross #cyclocrosschicago #cyclocrossinthemidwest" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>So proud to see my son as well as his custom bike bag company featured in the 2016 Novara Catalog!  #lovestarbicyclebags #lovestar #custombicyclebags #cyclingchicago #lovestarcyclingteam #cycling #cyclocross #cyclocrosschicago #cyclocrossinthemidwest</small>
-                           </div>
-                           <img src="../lsphotos/image000167.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000168.jpg" title="Silver Lake Highline Trail. #fatbike #cycling #lovestarbicyclebags #bikewinter #bicycle #pogies #bikepacking" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Silver Lake Highline Trail. #fatbike #cycling #lovestarbicyclebags #bikewinter #bicycle #pogies #bikepacking</small>
-                           </div>
-                           <img src="../lsphotos/image000168.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000169.jpg" title="Riding groomers at Silver Lake. #fatbike #cycling #bikewinter #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Riding groomers at Silver Lake. #fatbike #cycling #bikewinter #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000169.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000170.jpg" title="Shortly before I said farewell to REI, I had the opportunity to be a part of a photo shoot for the @rei 2016 Novara catalogue. They outfitted me with a bike, sent a camera crew and followed me around while I rode around the North Shore. It was a fun experience...and today I was able to snag a copy of the finished product. Some custom #lovestarbicyclebags that I had made for the bike were featured along with @otherbrothercoffee who graciously hosted me and the camera crew on the morning of the shoot. #REI #Novara #cycling #bikecommute #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Shortly before I said farewell to REI, I had the opportunity to be a part of a photo shoot for the @rei 2016 Novara catalogue. They outfitted me with a bike, sent a camera crew and followed me around while I rode around the North Shore. It was a fun experience...and today I was able to snag a copy of the finished product. Some custom #lovestarbicyclebags that I had made for the bike were featured along with @otherbrothercoffee who graciously hosted me and the camera crew on the morning of the shoot. #REI #Novara #cycling #bikecommute #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000170.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000171.jpg" title="Cold sunrise ride. #cycling #bikewinter #moots #psychloX #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Cold sunrise ride. #cycling #bikewinter #moots #psychloX #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000171.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
