--- a/instagram22.html
+++ b/instagram22.html
@@ -6,6 +6,123 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000645.jpg" title="Great photo courtesy of @elliotlovestarbicycles #lovestarfactoryteam #montrosecx" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>Great photo courtesy of @elliotlovestarbicycles #lovestarfactoryteam #montrosecx</small>
+                           </div>
+                           <img src="../lsphotos/image000645.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000646.jpg" title="Portable hot tub...must be a cross race. #Cyclocross #cx #lovestarfactoryteam #montrosecx #fatbike" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Portable hot tub...must be a cross race. #Cyclocross #cx #lovestarfactoryteam #montrosecx #fatbike</small>
+                           </div>
+                           <img src="../lsphotos/image000646.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000647.jpg" title="Big shout out to these to guys! @elliotlovestarbicycles and @casadewaggoner. Had such a blast racing CX with you guys this year!! Thanks for all the tips, encouragement, etc!  #lovestarfactoryteam #lsb" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>Big shout out to these to guys! @elliotlovestarbicycles and @casadewaggoner. Had such a blast racing CX with you guys this year!! Thanks for all the tips, encouragement, etc!  #lovestarfactoryteam #lsb</small>
+                           </div>
+                           <img src="../lsphotos/image000647.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000648.jpg" title="Last Cross race of 2015 and it was a great one (two?)! Got upgraded to Cat4 so I did that for the first time and then did Cat4/5 after. Got 15th and 6th respectively. #savingmybestforlast #lsb #lovestarfactoryteam #montrosecx #alreadylookingforwardtonextyear" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>Last Cross race of 2015 and it was a great one (two?)! Got upgraded to Cat4 so I did that for the first time and then did Cat4/5 after. Got 15th and 6th respectively. #savingmybestforlast #lsb #lovestarfactoryteam #montrosecx #alreadylookingforwardtonextyear</small>
+                           </div>
+                           <img src="../lsphotos/image000648.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000218.jpg" title="Congratulations Lovestar Factory Team on a fabulous race @ state finals and a great season! #lovestar #lovestarfactoryteam #lovestarbicyclebags #cyclocross #cyclocrosschicago #cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>Congratulations Lovestar Factory Team on a fabulous race @ state finals and a great season! #lovestar #lovestarfactoryteam #lovestarbicyclebags #cyclocross #cyclocrosschicago #cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000218.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000219.jpg" title="Racing his heart out to finish strong while the guys in the background are hot-tubbing it...must be cyclocross! Hahaha #cyclocross #cycling #cyclocrosschicago #lovestar #lovestarfactoryteam #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>Racing his heart out to finish strong while the guys in the background are hot-tubbing it...must be cyclocross! Hahaha #cyclocross #cycling #cyclocrosschicago #lovestar #lovestarfactoryteam #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000219.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000649.jpg" title="Found a place with a bite size helping of gnar right next to my house. #fatbike #globalfatbikeday #bikechi #cycling #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Found a place with a bite size helping of gnar right next to my house. #fatbike #globalfatbikeday #bikechi #cycling #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000649.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000220.jpg" title="Happy Global Fatbike Day! Here's to shorts in December! #globalfatbikeday #lovestarbicyclebags #cycling #bikechi #ElNino is Spanish for #TheNino" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Happy Global Fatbike Day! Here's to shorts in December! #globalfatbikeday #lovestarbicyclebags #cycling #bikechi #ElNino is Spanish for #TheNino</small>
+                           </div>
+                           <img src="../lsphotos/image000220.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000221.jpg" title="Quick & early ride this morning with good friends. Fog & mist made for a chilly ride...but not to shabby considering it's almost a week into December. #lovestarfactoryteam #cycling #moots #cx #cyclocross #bikechi #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Quick & early ride this morning with good friends. Fog & mist made for a chilly ride...but not to shabby considering it's almost a week into December. #lovestarfactoryteam #cycling #moots #cx #cyclocross #bikechi #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000221.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000650.jpg" title="Happy Holidays from the #LovestarFactoryTeam" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>theandyhudson</h4>
@@ -142,123 +259,6 @@
                               <small>Re-post from @elliotlovestarbicycles What a determined little cutie...won't be long now! #elliotlovestarbicycle #elliotlovestar #lovestarfactoryteam #lovestarbicyclebags</small>
                            </div>
                            <img src="../lsphotos/image000229.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000230.jpg" title="Awesome race @mariannebennetttattoo!!!!! Tough course, great ride. Way to push through!! Geat shot today @elliotlovestarbicycles  #cyclocrosschicago #cyclocross #cycling #lovestarfactoryteam #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>Awesome race @mariannebennetttattoo!!!!! Tough course, great ride. Way to push through!! Geat shot today @elliotlovestarbicycles  #cyclocrosschicago #cyclocross #cycling #lovestarfactoryteam #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000230.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000534.jpg" title="#babysnub wanted to get in on the sand pit action. #ILRcx #cyclocross #cx #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#babysnub wanted to get in on the sand pit action. #ILRcx #cyclocross #cx #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000534.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000653.jpg" title="Droppin into the sand. #ILRcx #cyclocross #cx #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Droppin into the sand. #ILRcx #cyclocross #cx #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000653.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000654.jpg" title="@mariannebennetttattoo lookin' pro in the sand at #ILRcx #cyclocross #cx #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>@mariannebennetttattoo lookin' pro in the sand at #ILRcx #cyclocross #cx #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000654.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000655.jpg" title="Hustle & flow. #cyclocross #cx #ILRcx #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Hustle & flow. #cyclocross #cx #ILRcx #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000655.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000656.jpg" title="Out on the #ILRcx Course for my second race today. Lots of sand... #cyclocross #cx #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Out on the #ILRcx Course for my second race today. Lots of sand... #cyclocross #cx #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000656.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000657.jpg" title="@elliotlovestarbicycles rocking in the single speed category. #ILRcx #lsb #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>@elliotlovestarbicycles rocking in the single speed category. #ILRcx #lsb #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000657.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000658.jpg" title="Tried my First single speed race today...feeling some n+1 vibes already. 🙄#ILRcx #cylist #cyclocross #cx #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Tried my First single speed race today...feeling some n+1 vibes already. 🙄#ILRcx #cylist #cyclocross #cx #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000658.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000659.jpg" title="@ddave12000 rocking his first Masters race today. #lovestarfactoryteam #cyclocross #cylist #cycling #cx #ILRcx" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>@ddave12000 rocking his first Masters race today. #lovestarfactoryteam #cyclocross #cylist #cycling #cx #ILRcx</small>
-                           </div>
-                           <img src="../lsphotos/image000659.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
