--- a/instagram26.html
+++ b/instagram26.html
@@ -6,6 +6,123 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000253.jpg" title="Sneak peak of some intense design work for a custom bag project. #handmade #lovestarbicyclebags #bicyclebag #cycling #sewrad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sneak peak of some intense design work for a custom bag project. #handmade #lovestarbicyclebags #bicyclebag #cycling #sewrad</small>
+                           </div>
+                           <img src="../lsphotos/image000253.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000688.jpg" title="#lovestarfactoryteam juniors squad had a big day of riding. #futurecyclist #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#lovestarfactoryteam juniors squad had a big day of riding. #futurecyclist #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000688.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000689.jpg" title="#babysnub saw some BMX guys doing a bunny hop competition and decided to show off her shred skills. #babygnar #futurecyclist #cycling #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#babysnub saw some BMX guys doing a bunny hop competition and decided to show off her shred skills. #babygnar #futurecyclist #cycling #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000689.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000690.jpg" title="Family fatbiking at #biketheridge2015 #babysnub #fatbike #cycling #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Family fatbiking at #biketheridge2015 #babysnub #fatbike #cycling #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000690.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000691.jpg" title="Great crew reppin' the #lovestarfactoryteam colors this morning." rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Great crew reppin' the #lovestarfactoryteam colors this morning.</small>
+                           </div>
+                           <img src="../lsphotos/image000691.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000692.jpg" title="#lovestarfactoryteam Hasselhoff ride. Mornings are getting darker...sigh. #cycling #bicycle #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#lovestarfactoryteam Hasselhoff ride. Mornings are getting darker...sigh. #cycling #bicycle #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000692.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000254.jpg" title="Bridge crossing at dusk on my commute home tonight. #fatbike #bikepacking #bikecommute #framebag #lovestarbicyclebags #cycling #cyclist #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Bridge crossing at dusk on my commute home tonight. #fatbike #bikepacking #bikecommute #framebag #lovestarbicyclebags #cycling #cyclist #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000254.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000537.jpg" title="@casadewaggoner double hitting the 4 and the 4/5s races. #lovestarfactoryteam #chicagocrosscup #caldwellcx #cyclocross #cx" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>@casadewaggoner double hitting the 4 and the 4/5s races. #lovestarfactoryteam #chicagocrosscup #caldwellcx #cyclocross #cx</small>
+                           </div>
+                           <img src="../lsphotos/image000537.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000693.jpg" title="#lovestarfactoryteam kicking off the #chicagocrosscup at the relocated #caldwellcx race today! #cyclocross #cx #cycling #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#lovestarfactoryteam kicking off the #chicagocrosscup at the relocated #caldwellcx race today! #cyclocross #cx #cycling #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000693.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000255.jpg" title="Commuting on a sunny Saturday afternoon on one of the areas most popular bike trails has to be as close as it comes to a Cat 6 world championships. #bikecommute #fatbike #bikepacking #bicyclebag #framebag #lovestarbicyclebags #handmade #bikechi #cycling #cat6" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -142,123 +259,6 @@
                               <small>First ride on the whip in quite some time. It had been on long term loan to a friend whose bike had been stolen...I feel so speedy 😄 #lovestarfactoryteam #cycling #cyclist #bmc #roadie</small>
                            </div>
                            <img src="../lsphotos/image000698.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000261.jpg" title="Family #fatbike adventures. #Babysnub #lovestarbicyclebags #cycling #adventuredad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Family #fatbike adventures. #Babysnub #lovestarbicyclebags #cycling #adventuredad</small>
-                           </div>
-                           <img src="../lsphotos/image000261.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000262.jpg" title="Fat bike & Flowers for my commute today. #fatbike #cycling #bikecommute #bikechi #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Fat bike & Flowers for my commute today. #fatbike #cycling #bikecommute #bikechi #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000262.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000699.jpg" title="Riding the 'goons. #fatbike #bikechi #lovestarfactoryteam #greenbaycycles" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Riding the 'goons. #fatbike #bikechi #lovestarfactoryteam #greenbaycycles</small>
-                           </div>
-                           <img src="../lsphotos/image000699.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000700.jpg" title="Riding bikes with big tires in the dirt with @jobywankenoby tonight... Thanks to @greenbaycycles for organizing a great ride! #cycling #mountainbike #bikechi #fatbike #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Riding bikes with big tires in the dirt with @jobywankenoby tonight... Thanks to @greenbaycycles for organizing a great ride! #cycling #mountainbike #bikechi #fatbike #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000700.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000263.jpg" title="Proud Grandma with the youngest member of the Lovestar Factory Team : )  #cyclocrosschicago #cyclocrossinthemidwest #cycling #lovestarfactoryteam #lovestarbicyclebags #cyclocross" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>Proud Grandma with the youngest member of the Lovestar Factory Team : )  #cyclocrosschicago #cyclocrossinthemidwest #cycling #lovestarfactoryteam #lovestarbicyclebags #cyclocross</small>
-                           </div>
-                           <img src="../lsphotos/image000263.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000264.jpg" title="Finished well on a tough technical course! Great first race of the season!!! #lovestarfactoryteam #lovestarbicyclebags #cyclocrosschicago #cyclocrossinthemidwest #cycling" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>Finished well on a tough technical course! Great first race of the season!!! #lovestarfactoryteam #lovestarbicyclebags #cyclocrosschicago #cyclocrossinthemidwest #cycling</small>
-                           </div>
-                           <img src="../lsphotos/image000264.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000265.jpg" title="A great first race of the season. Go Lovestar Factory Team!!!!! #cyclocrosschicago #cycling #cyclocrossinthemidwest #lovestarfactoryteam #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>A great first race of the season. Go Lovestar Factory Team!!!!! #cyclocrosschicago #cycling #cyclocrossinthemidwest #lovestarfactoryteam #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000265.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000701.jpg" title="Big thanks to @brittanyfaithphotography for capturing this great shot from today's #relaycx race... #lovestarfactoryteam #cyclocross #cx #bikechi #cycling" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Big thanks to @brittanyfaithphotography for capturing this great shot from today's #relaycx race... #lovestarfactoryteam #cyclocross #cx #bikechi #cycling</small>
-                           </div>
-                           <img src="../lsphotos/image000701.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000702.jpg" title="#lovestarfactoryteam Junior's team is more junior than your junior team...😍 #cyclocross #cx #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#lovestarfactoryteam Junior's team is more junior than your junior team...😍 #cyclocross #cx #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000702.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
