--- a/instagram29.html
+++ b/instagram29.html
@@ -6,6 +6,123 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000281.jpg" title="Another shot from my ride home tonight... #lovestarbicyclebags #fatbike #cycling #bikecommute #bikepacking" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Another shot from my ride home tonight... #lovestarbicyclebags #fatbike #cycling #bikecommute #bikepacking</small>
+                           </div>
+                           <img src="../lsphotos/image000281.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000282.jpg" title="Bike commuting for the last 8+ years, I've developed pretty thick skin when it comes to driver road rage. But some days, it can still just set you off in a way that threatens to ruin a ride. One of the benefits of commuting via fat bike, is that you can turn off the route and explore less travelled pathways...today's exploring turned a seething road rage ride into a relaxed & scenic adventure. Life is too short to let others ruin the things you love...so here's to the road less travelled. #bikecommute #fatbike #bikechi #bicycle #cyclist #cycling #lovestarbicyclebags #lovestarfactoryteam #framebag #bikepacking #adventurebike" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Bike commuting for the last 8+ years, I've developed pretty thick skin when it comes to driver road rage. But some days, it can still just set you off in a way that threatens to ruin a ride. One of the benefits of commuting via fat bike, is that you can turn off the route and explore less travelled pathways...today's exploring turned a seething road rage ride into a relaxed & scenic adventure. Life is too short to let others ruin the things you love...so here's to the road less travelled. #bikecommute #fatbike #bikechi #bicycle #cyclist #cycling #lovestarbicyclebags #lovestarfactoryteam #framebag #bikepacking #adventurebike</small>
+                           </div>
+                           <img src="../lsphotos/image000282.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000283.jpg" title="Color matching on my commute today is on fleek. #ijustsaidfleek #cycling #lovestarfactoryteam #lovestarbicyclebags #fatbike #bikecommute #bikechi #bikepacking" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Color matching on my commute today is on fleek. #ijustsaidfleek #cycling #lovestarfactoryteam #lovestarbicyclebags #fatbike #bikecommute #bikechi #bikepacking</small>
+                           </div>
+                           <img src="../lsphotos/image000283.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000284.jpg" title="Fat bike family adventures. #fatbike #adventuredad #bikepacking #framebag #lovestarbicyclebags #thulechariot #lakemichigan #Chicago #cycling #cyclist" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Fat bike family adventures. #fatbike #adventuredad #bikepacking #framebag #lovestarbicyclebags #thulechariot #lakemichigan #Chicago #cycling #cyclist</small>
+                           </div>
+                           <img src="../lsphotos/image000284.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000285.jpg" title="Late night miles along Lake Michigan... #fatbike #lakemichigan #Chicago #cycling #cyclist #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Late night miles along Lake Michigan... #fatbike #lakemichigan #Chicago #cycling #cyclist #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000285.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000718.jpg" title="#cycling #ladiesoflovestar #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>oliviabeaty</h4>
+                              <small>#cycling #ladiesoflovestar #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000718.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000719.jpg" title="Big mountain riding. #babysnub #babyGnar #lovestarfactoryteam #cyclist #futurecyclist #littleshredder #bigsky #cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Big mountain riding. #babysnub #babyGnar #lovestarfactoryteam #cyclist #futurecyclist #littleshredder #bigsky #cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000719.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000720.jpg" title="Some of these roads...by themselves, are worth the trip to #bigsky #lovestarfactoryteam #cycling #cyclist" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Some of these roads...by themselves, are worth the trip to #bigsky #lovestarfactoryteam #cycling #cyclist</small>
+                           </div>
+                           <img src="../lsphotos/image000720.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000721.jpg" title="Road bikes off road. #bigsky #moots #psychloX #cycling #cyclist #gravelgrinder #gravel #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Road bikes off road. #bigsky #moots #psychloX #cycling #cyclist #gravelgrinder #gravel #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000721.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000722.jpg" title="Morning climb... #cycling #cyclist #moots #psychloX #lovestarfactoryteam #bigsky #" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -142,131 +259,6 @@
                               <small>Took me a while to find a transportation solution for this bike...#RockyMounts came through with their brass knuckles roof rack. Keeps the bike up top in all of its monstrous glory. #fatbike #cyclistproblems #lovestarbicyclebags #cycling #bicycle</small>
                            </div>
                            <img src="../lsphotos/image000288.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000289.jpg" title="Oasis. #moots #psychloX #cycling #cyclist #bicycle #bikechi #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Oasis. #moots #psychloX #cycling #cyclist #bicycle #bikechi #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000289.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000290.jpg" title="Big bird, big tires...happy Friday! #fatbikefriday #fatbike #bicycle #cycling #lovestarfactoryteam #bikechi #lovestarbicyclebags #handmade #bikepacking #framebag #seatbag #bicyclebag" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Big bird, big tires...happy Friday! #fatbikefriday #fatbike #bicycle #cycling #lovestarfactoryteam #bikechi #lovestarbicyclebags #handmade #bikepacking #framebag #seatbag #bicyclebag</small>
-                           </div>
-                           <img src="../lsphotos/image000290.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000730.jpg" title="#babysnub shreddin' the bike lane. #cycling #lovestarfactoryteam #futurecyclist #bicycle #striderbikes #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#babysnub shreddin' the bike lane. #cycling #lovestarfactoryteam #futurecyclist #bicycle #striderbikes #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000730.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000291.jpg" title="#Repost @elliotlovestarbicycles with @repostapp.
-・・・
-Some muddy #lovestarbicyclebags product testing. #handmade #bicyclebag #fatbike #bikechi #bicycle #cycling #framebag #bikepacking #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>fatbikee</h4>
-                              <small>#Repost @elliotlovestarbicycles with @repostapp.
-・・・
-Some muddy #lovestarbicyclebags product testing. #handmade #bicyclebag #fatbike #bikechi #bicycle #cycling #framebag #bikepacking #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000291.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000292.jpg" title="Some muddy #lovestarbicyclebags product testing. #handmade #bicyclebag #fatbike #bikechi #bicycle #cycling #framebag #bikepacking #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Some muddy #lovestarbicyclebags product testing. #handmade #bicyclebag #fatbike #bikechi #bicycle #cycling #framebag #bikepacking #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000292.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000293.jpg" title="#Repost @elliotlovestarbicycles with @repostapp.
-・・・
-Added a custom #lovestarbicyclebags top tube bag to this #bikepacking set up. #fatbike #cyclist #bicycle #cycling #bicyclebag #handmade #framebag #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>fatbikee</h4>
-                              <small>#Repost @elliotlovestarbicycles with @repostapp.
-・・・
-Added a custom #lovestarbicyclebags top tube bag to this #bikepacking set up. #fatbike #cyclist #bicycle #cycling #bicyclebag #handmade #framebag #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000293.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000294.jpg" title="Up close. #lovestarbicyclebags #handmade #bikepacking #framebag #cycling #bikechi #bicycle #fatbike #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Up close. #lovestarbicyclebags #handmade #bikepacking #framebag #cycling #bikechi #bicycle #fatbike #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000294.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000295.jpg" title="Added a custom #lovestarbicyclebags top tube bag to this #bikepacking set up. #fatbike #cyclist #bicycle #cycling #bicyclebag #handmade #framebag #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Added a custom #lovestarbicyclebags top tube bag to this #bikepacking set up. #fatbike #cyclist #bicycle #cycling #bicyclebag #handmade #framebag #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000295.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000731.jpg" title="#LovestarFactoryTeam and our littlest mechanic." rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>theandyhudson</h4>
-                              <small>#LovestarFactoryTeam and our littlest mechanic.</small>
-                           </div>
-                           <img src="../lsphotos/image000731.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
