--- a/instagram31.html
+++ b/instagram31.html
@@ -6,6 +6,123 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000737.jpg" title="Beautiful morning for a bike ride! #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>oliviabeaty</h4>
+                              <small>Beautiful morning for a bike ride! #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000737.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000738.jpg" title="A couple of #lovestarfactoryteam riders doing some grass hill repeats at the local park. #cycling #cyclocross #cx #bikechi #bicycle #striderbikes #fatbike #adventuredad #futurecyclist #babyGnar #babysnub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>A couple of #lovestarfactoryteam riders doing some grass hill repeats at the local park. #cycling #cyclocross #cx #bikechi #bicycle #striderbikes #fatbike #adventuredad #futurecyclist #babyGnar #babysnub</small>
+                           </div>
+                           <img src="../lsphotos/image000738.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000302.jpg" title="Color match test... #bikepacking #framebag #handmade #lovestarbicyclebags #bicyclebag #cycling #fatbike #bicycle #bikechi #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Color match test... #bikepacking #framebag #handmade #lovestarbicyclebags #bicyclebag #cycling #fatbike #bicycle #bikechi #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000302.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000303.jpg" title="#lovestarbicyclebags custom #framebag begins. It's been a while since I made anything for my own bikes...nothing like high contrast stitching to make a bag pop. #handmade #bicycle #bicyclebag #bikepacking #cycling #bikechi #fatbike #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#lovestarbicyclebags custom #framebag begins. It's been a while since I made anything for my own bikes...nothing like high contrast stitching to make a bag pop. #handmade #bicycle #bicyclebag #bikepacking #cycling #bikechi #fatbike #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000303.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000304.jpg" title="#lovestarbicyclebags feed bag prototype. Some adjustments to be made, before a beta test version will be ready, but not a bad first pass. #handmade #bikepacking #cycling #bicyclebag #bicycle #fatbike" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#lovestarbicyclebags feed bag prototype. Some adjustments to be made, before a beta test version will be ready, but not a bad first pass. #handmade #bikepacking #cycling #bicyclebag #bicycle #fatbike</small>
+                           </div>
+                           <img src="../lsphotos/image000304.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000305.jpg" title="Prototype #lovestarbicyclebags feed bag. Part of a larger #bikepacking set up, these little bags can be invaluable for bike adventures. This was a first draft, plenty of things to be tweaked, but hoping to have a beta test model ready soon! #handmade #bicycle #bicyclebag #cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Prototype #lovestarbicyclebags feed bag. Part of a larger #bikepacking set up, these little bags can be invaluable for bike adventures. This was a first draft, plenty of things to be tweaked, but hoping to have a beta test model ready soon! #handmade #bicycle #bicyclebag #cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000305.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000306.jpg" title="Sometimes you just *have* to ride, even in the pouring rain. Like &quot;Dad&quot; says, &quot;character building&quot; #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>agonz21</h4>
+                              <small>Sometimes you just *have* to ride, even in the pouring rain. Like "Dad" says, "character building" #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000306.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000739.jpg" title="Rainy team ride this morning. #cycling #bicycle #Chicago #moots #rainride #bikechi #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Rainy team ride this morning. #cycling #bicycle #Chicago #moots #rainride #bikechi #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000739.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000307.jpg" title="Came home to a big fabric delivery! #lovestarbicyclebags #cycling #bikepacking #bicyclebag #bicycle #handmade #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Came home to a big fabric delivery! #lovestarbicyclebags #cycling #bikepacking #bicyclebag #bicycle #handmade #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000307.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000740.jpg" title="#Repost @elliotlovestarbicycles with @repostapp.
 ・・・
 #fatbikefriday spring flowers commute, complete with showers. #cycling #bicycle #fatbike #bikechi #cyclist #lovestarfactoryteam" rel="lightbox" class="fancybox">
@@ -146,123 +263,6 @@
                               <small>Early morning miles with the Lovestar Team. Andy was so fast on his new bike, hence the blurriness. #lovestarbicyclebags</small>
                            </div>
                            <img src="../lsphotos/image000312.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000746.jpg" title="New bikes & lots of smiles for an early AM #lovestarfactoryteam ride. #cycling #bicycle #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>New bikes & lots of smiles for an early AM #lovestarfactoryteam ride. #cycling #bicycle #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000746.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000747.jpg" title="Looking forward to my ride in the morning! #lovestarfactoryteam @pearlizumiofficial @rideshimano @icebreakernz" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>oliviabeaty</h4>
-                              <small>Looking forward to my ride in the morning! #lovestarfactoryteam @pearlizumiofficial @rideshimano @icebreakernz</small>
-                           </div>
-                           <img src="../lsphotos/image000747.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000313.jpg" title="Inaugural ride on my new rig.  Thanks @velosmith #parleecycles #envecomposites #rideshimano #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>agonz21</h4>
-                              <small>Inaugural ride on my new rig.  Thanks @velosmith #parleecycles #envecomposites #rideshimano #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000313.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000314.jpg" title="2 #lovestarbicyclebags SaddlePacks on the bench for tonight. #handmade #MUSA #cycling #bicycle #bicyclebag #bikepacking #seatbag" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>2 #lovestarbicyclebags SaddlePacks on the bench for tonight. #handmade #MUSA #cycling #bicycle #bicyclebag #bikepacking #seatbag</small>
-                           </div>
-                           <img src="../lsphotos/image000314.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000748.jpg" title="One sleeping. One singing at the top of her lungs. #adventuredad #cycling #cyclist #dadlife #bicycle #thulechariot #bikechi #lovestarfactoryteam #" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>One sleeping. One singing at the top of her lungs. #adventuredad #cycling #cyclist #dadlife #bicycle #thulechariot #bikechi #lovestarfactoryteam #</small>
-                           </div>
-                           <img src="../lsphotos/image000748.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000749.jpg" title="#LoveStarFactoryTeam @ddave12000" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>theandyhudson</h4>
-                              <small>#LoveStarFactoryTeam @ddave12000</small>
-                           </div>
-                           <img src="../lsphotos/image000749.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000750.jpg" title="Gritty and wet today. Shoe/Sock game was strong, albeit dirty. #cycling #bicycle #bikechi #lovestarfactoryteam #nobadweather" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Gritty and wet today. Shoe/Sock game was strong, albeit dirty. #cycling #bicycle #bikechi #lovestarfactoryteam #nobadweather</small>
-                           </div>
-                           <img src="../lsphotos/image000750.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000751.jpg" title="Fat bike Friday! First commute on this monster. Kind of in love. #fatbike #bicycle #cycling #bikechi #lovestarfactoryteam #fatbikefriday #motobecane" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Fat bike Friday! First commute on this monster. Kind of in love. #fatbike #bicycle #cycling #bikechi #lovestarfactoryteam #fatbikefriday #motobecane</small>
-                           </div>
-                           <img src="../lsphotos/image000751.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000315.jpg" title="Brainstorming begins... #fatbike #bikepacking #framebag #lovestarbicyclebags #cycling #bikechi #bicycle #adventurebike" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Brainstorming begins... #fatbike #bikepacking #framebag #lovestarbicyclebags #cycling #bikechi #bicycle #adventurebike</small>
-                           </div>
-                           <img src="../lsphotos/image000315.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
