--- a/instagram33.html
+++ b/instagram33.html
@@ -6,6 +6,123 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000324.jpg" title="Finally was able to finish up this Grey and Black #lovestarbicyclebags SaddlePack. Subtle exterior hides a blaze orange interior. #handmade #cycling #bicycle #bicyclebag #bikechi #bikepacking #seatbag #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Finally was able to finish up this Grey and Black #lovestarbicyclebags SaddlePack. Subtle exterior hides a blaze orange interior. #handmade #cycling #bicycle #bicyclebag #bikechi #bikepacking #seatbag #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000324.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000325.jpg" title="I think Billy Idol said it best: &quot;nice day for... bike riding...&quot; Or something like that. #lovestarbicyclebags #bikechi #itsspringagain" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>agonz21</h4>
+                              <small>I think Billy Idol said it best: "nice day for... bike riding..." Or something like that. #lovestarbicyclebags #bikechi #itsspringagain</small>
+                           </div>
+                           <img src="../lsphotos/image000325.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000326.jpg" title="Some classic grey and black for this #lovestarbicyclebags SaddlePack. Final stock project for a little while. Starting in on a big custom project. #handmade #cycling #bicycle #bikepacking #bikechi #bicyclebag #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Some classic grey and black for this #lovestarbicyclebags SaddlePack. Final stock project for a little while. Starting in on a big custom project. #handmade #cycling #bicycle #bikepacking #bikechi #bicyclebag #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000326.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000327.jpg" title="Smiles for miles. #babysnub #futurecyclist #championsystem #striderbikes #Lovestarbicyclebags #cycling #bicycle" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Smiles for miles. #babysnub #futurecyclist #championsystem #striderbikes #Lovestarbicyclebags #cycling #bicycle</small>
+                           </div>
+                           <img src="../lsphotos/image000327.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000328.jpg" title="The youngest member of Lovestar Factory Team dropping in on the technical section of the train station ramp. #futurecyclist #striderbikes #championsystem #evanston #cycling #Lovestarbicyclebags #lilShredder #babysnub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>The youngest member of Lovestar Factory Team dropping in on the technical section of the train station ramp. #futurecyclist #striderbikes #championsystem #evanston #cycling #Lovestarbicyclebags #lilShredder #babysnub</small>
+                           </div>
+                           <img src="../lsphotos/image000328.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000329.jpg" title="Finished up a flashy #Lovestarbicyclebags SaddlePack . Made this one to match a Lovestar Factory Team rider's  framebag. #handmade #bikepacking #bicycle #bicyclebag #cycling #custom #bikechi #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Finished up a flashy #Lovestarbicyclebags SaddlePack . Made this one to match a Lovestar Factory Team rider's  framebag. #handmade #bikepacking #bicycle #bicyclebag #cycling #custom #bikechi #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000329.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000330.jpg" title="Searching through cross race photos from this past year. Came across this gem from #snowymountainphotography check him out! #lovestarbicyclebags #cyclocross #cx #barriers #moots #championsystem #bikechi #cycling #bicycle" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Searching through cross race photos from this past year. Came across this gem from #snowymountainphotography check him out! #lovestarbicyclebags #cyclocross #cx #barriers #moots #championsystem #bikechi #cycling #bicycle</small>
+                           </div>
+                           <img src="../lsphotos/image000330.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000331.jpg" title="Morning commute made me thankful for a high BB and waterproof bags. #lovestarbicyclebags #northbranchtrail #bikechi #moots #adventurebike #cycling #cyclocross #cx #bikecommute" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Morning commute made me thankful for a high BB and waterproof bags. #lovestarbicyclebags #northbranchtrail #bikechi #moots #adventurebike #cycling #cyclocross #cx #bikecommute</small>
+                           </div>
+                           <img src="../lsphotos/image000331.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000332.jpg" title="A pair of #lovestarbicyclebags on their matching bikes. #handmade #custom #bicyclebag #cycling #cyclocross #cx #bikechi #cannondale #seatbag #bikepacking" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>A pair of #lovestarbicyclebags on their matching bikes. #handmade #custom #bicyclebag #cycling #cyclocross #cx #bikechi #cannondale #seatbag #bikepacking</small>
+                           </div>
+                           <img src="../lsphotos/image000332.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000333.jpg" title="Finished up the sister #lovestarbicyclebags SaddlePack to yesterday's post. Two bags two bikes one lucky customer. #handmade #cycling #bicycle #bikechi #cycling #bikepacking #bicyclebag" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -142,123 +259,6 @@
                               <small>Racing stripes are also available in #Lovestarbicyclebags Saddle Packs. #handmade #bicycle #bikebag #bikechi #bikepacking #SewRad</small>
                            </div>
                            <img src="../lsphotos/image000341.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000342.jpg" title="Some recent examples of custom color #Lovestarbicyclebags Saddle Packs. More examples available on ETSY and Facebook. #handmade #cycling #bikebag #bikepacking #bicycle #bicyclebag #custom #bikechi #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Some recent examples of custom color #Lovestarbicyclebags Saddle Packs. More examples available on ETSY and Facebook. #handmade #cycling #bikebag #bikepacking #bicycle #bicyclebag #custom #bikechi #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000342.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000343.jpg" title="@agonz21 crushing ravine climbs and taking names. #lovestarbicyclebags #cycling #cyclocross #cx #bicycle #bikechi #barryroubaix" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>@agonz21 crushing ravine climbs and taking names. #lovestarbicyclebags #cycling #cyclocross #cx #bicycle #bikechi #barryroubaix</small>
-                           </div>
-                           <img src="../lsphotos/image000343.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000344.jpg" title="Lovestar Factory Team cramming in some hill repeats before Barry Roubaix. #lovestarbicyclebags #cycling #barryroubaix #cx #cyclocross #gravel #gravelgrinder #bicycle #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Lovestar Factory Team cramming in some hill repeats before Barry Roubaix. #lovestarbicyclebags #cycling #barryroubaix #cx #cyclocross #gravel #gravelgrinder #bicycle #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000344.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000345.jpg" title="Keeping it tight. Saddle bags shouldn't move. #lovestarbicyclebags #handmade #custom #bicyclebag #seatbag #bicycle #cycling #bikepacking #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Keeping it tight. Saddle bags shouldn't move. #lovestarbicyclebags #handmade #custom #bicyclebag #seatbag #bicycle #cycling #bikepacking #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000345.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000346.jpg" title="Finished up a snazzy black and red #Lovestarbicyclebags Saddle Pack. Shipping out to a customer this afternoon. Amazing what you can accomplish when both kids nap at the same time. #handmade #bikepacking #cycling #bicycle #bicyclebag #bikechi #dadlife #seatbag #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Finished up a snazzy black and red #Lovestarbicyclebags Saddle Pack. Shipping out to a customer this afternoon. Amazing what you can accomplish when both kids nap at the same time. #handmade #bikepacking #cycling #bicycle #bicyclebag #bikechi #dadlife #seatbag #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000346.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000347.jpg" title="Night ride gathering. #lovestarbicyclebags #cycling #nightride #neverabadTimetoRide #bicycle #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Night ride gathering. #lovestarbicyclebags #cycling #nightride #neverabadTimetoRide #bicycle #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000347.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000348.jpg" title="Lovestar Factory Team riders out putting in some night miles. #cycling #bikechi #bicycle #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Lovestar Factory Team riders out putting in some night miles. #cycling #bikechi #bicycle #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000348.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000349.jpg" title="Solo Sunday ride. In the #Chicago area, hill repeats means riding up an down the ravines towards #LakeMichigan beautiful spring day. #moots #cycling #bicycle #training #lovestarbicyclebags #SundaySolo #cx #cyclocross" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Solo Sunday ride. In the #Chicago area, hill repeats means riding up an down the ravines towards #LakeMichigan beautiful spring day. #moots #cycling #bicycle #training #lovestarbicyclebags #SundaySolo #cx #cyclocross</small>
-                           </div>
-                           <img src="../lsphotos/image000349.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000350.jpg" title="Lovestar Factory Team was out this morning fighting some epic coffee shop sprint battles. #cycling #bikehi #lovestarbicyclebags #championsystem #bikestyle #bicycle" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Lovestar Factory Team was out this morning fighting some epic coffee shop sprint battles. #cycling #bikehi #lovestarbicyclebags #championsystem #bikestyle #bicycle</small>
-                           </div>
-                           <img src="../lsphotos/image000350.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
