--- a/instagram39.html
+++ b/instagram39.html
@@ -6,6 +6,123 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000442.jpg" title="Starting the build process on a customer's custom frame bag. All black exterior with some poppin' lime interior. #bikepacking #lovestarbicyclebags #lovestarbicycles #handmade #madeinchicago #bikechi #cycling #gravelgrinder #gravel #framebag #bikebag" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Starting the build process on a customer's custom frame bag. All black exterior with some poppin' lime interior. #bikepacking #lovestarbicyclebags #lovestarbicycles #handmade #madeinchicago #bikechi #cycling #gravelgrinder #gravel #framebag #bikebag</small>
+                           </div>
+                           <img src="../lsphotos/image000442.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000443.jpg" title="Second bag of the night is this Rasta themed SaddlePack. Lots of little details on this one. #handmade #bikechi #bikepacking #bicycle #sewrad #cycling #madeinchicago #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Second bag of the night is this Rasta themed SaddlePack. Lots of little details on this one. #handmade #bikechi #bikepacking #bicycle #sewrad #cycling #madeinchicago #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000443.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000444.jpg" title="Today's ride was about trying to outrun the rain. Great group, tough ride, knobbies made me work a little extra today. Stupendous waffle for a well earned post ride reward. #lovestarbicyclebags #cycling #cyclocross #bikechi #moots #liegewaffle #delbescorner" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Today's ride was about trying to outrun the rain. Great group, tough ride, knobbies made me work a little extra today. Stupendous waffle for a well earned post ride reward. #lovestarbicyclebags #cycling #cyclocross #bikechi #moots #liegewaffle #delbescorner</small>
+                           </div>
+                           <img src="../lsphotos/image000444.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000445.jpg" title="The Large Lovestar SaddlePack next to our Standard sized SaddlePack. #carrymorestuff #cycling #bikepacking #lovestarbicyclebags #handmade #madeinchicago #madeintheusa #sewrad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>The Large Lovestar SaddlePack next to our Standard sized SaddlePack. #carrymorestuff #cycling #bikepacking #lovestarbicyclebags #handmade #madeinchicago #madeintheusa #sewrad</small>
+                           </div>
+                           <img src="../lsphotos/image000445.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000446.jpg" title="Purple & teal Custom large SaddlePack. #handmade #bikechi #bikepacking #lovestarbicyclebags #lovestarbicycles #bikebag #cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Purple & teal Custom large SaddlePack. #handmade #bikechi #bikepacking #lovestarbicyclebags #lovestarbicycles #bikebag #cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000446.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000447.jpg" title="Custom Lovestar SaddlePack in the works. These colors are just so good. #gnarfest #handmade #lovestarbicycles #cycling #bikechi #madeinchicago #bikebag #lovestarbicyclebags #bikepacking" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Custom Lovestar SaddlePack in the works. These colors are just so good. #gnarfest #handmade #lovestarbicycles #cycling #bikechi #madeinchicago #bikebag #lovestarbicyclebags #bikepacking</small>
+                           </div>
+                           <img src="../lsphotos/image000447.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000448.jpg" title="Got my new saddle bag for my ride. Shout out Lovestar Bicycle Bags. #saddlebag #LovestarBicycleBags #elliotlovestarbicycles #salsaVaya2 #PimpMyRide" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>aleaders</h4>
+                              <small>Got my new saddle bag for my ride. Shout out Lovestar Bicycle Bags. #saddlebag #LovestarBicycleBags #elliotlovestarbicycles #salsaVaya2 #PimpMyRide</small>
+                           </div>
+                           <img src="../lsphotos/image000448.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000449.jpg" title="Homemade barriers. Time to start practicin' #cx2014 #cx #cyclocross #cycling #crossishere #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Homemade barriers. Time to start practicin' #cx2014 #cx #cyclocross #cycling #crossishere #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000449.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000450.jpg" title="Lovestar Factory Team racing Chicago today. Loved the new pit crew! #cyclocross #cycling  #chicagocycling #lovestarfactoryteam #lovestarbicyclebags #elliotlovestar #bikechi #bikeracing" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>Lovestar Factory Team racing Chicago today. Loved the new pit crew! #cyclocross #cycling  #chicagocycling #lovestarfactoryteam #lovestarbicyclebags #elliotlovestar #bikechi #bikeracing</small>
+                           </div>
+                           <img src="../lsphotos/image000450.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000451.jpg" title="Re-gram from @pattylouwho55 Lovestar Factory Team kicking it at Relay CX today. #cyclocross #cycling #bikechi #lovestarbicyclebags" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -142,123 +259,6 @@
                               <small>Lovestar Saddle Pack out on the road. #lovestarbicyclebags #custom #handmade #bikechi #madeinchicago #cycling #bicycle</small>
                            </div>
                            <img src="../lsphotos/image000460.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000461.jpg" title="More Lovestar Saddle Packs. Had some time off for some big life things...now time to get caught up on orders! #lovestarbicyclebags #cycling #bikechi #bikepacking #handmade #custom #sewawesome" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>More Lovestar Saddle Packs. Had some time off for some big life things...now time to get caught up on orders! #lovestarbicyclebags #cycling #bikechi #bikepacking #handmade #custom #sewawesome</small>
-                           </div>
-                           <img src="../lsphotos/image000461.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000462.jpg" title="Finished up this slick Saddle Pack tonight. Shipping out to Germany tomorrow! Grey with blaze orange turned out really well, still one of my favorite color combos #lovestarbicyclebags #handmade #bicycle #cycling #bikepacking #custom" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Finished up this slick Saddle Pack tonight. Shipping out to Germany tomorrow! Grey with blaze orange turned out really well, still one of my favorite color combos #lovestarbicyclebags #handmade #bicycle #cycling #bikepacking #custom</small>
-                           </div>
-                           <img src="../lsphotos/image000462.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000463.jpg" title="Lots of Saddle Packs in the works this weekend. #lovestarbicyclebags #handmade #cycling #bikechi #bikepacking #custom" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Lots of Saddle Packs in the works this weekend. #lovestarbicyclebags #handmade #cycling #bikechi #bikepacking #custom</small>
-                           </div>
-                           <img src="../lsphotos/image000463.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000464.jpg" title="Started accessorizing to my new team kit...both my helmet and shoes came in this week. They are both &quot;hit-you-in-the-face&quot; bright. #lovestarbicyclebags #nofilter lazersport #giro #orangeyougladididntsaybanana" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Started accessorizing to my new team kit...both my helmet and shoes came in this week. They are both "hit-you-in-the-face" bright. #lovestarbicyclebags #nofilter lazersport #giro #orangeyougladididntsaybanana</small>
-                           </div>
-                           <img src="../lsphotos/image000464.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000465.jpg" title="Hey Lovestar Teammates! Looking for some sweet bike kicks to go with our new team kit? Check out these Bont Vaypors on EBay. You wear these with some blue socks... #nextlevel #cycling #lovestarbicyclebags #cyclingstyle @casadewaggoner @agonz21" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Hey Lovestar Teammates! Looking for some sweet bike kicks to go with our new team kit? Check out these Bont Vaypors on EBay. You wear these with some blue socks... #nextlevel #cycling #lovestarbicyclebags #cyclingstyle @casadewaggoner @agonz21</small>
-                           </div>
-                           <img src="../lsphotos/image000465.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000466.jpg" title="My personal Lovestar Saddle Pack ride kit. #cycling #bikechi #bicycle #lovestarbicyclebags #fixitsticks @fixitsticks #essentials" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>My personal Lovestar Saddle Pack ride kit. #cycling #bikechi #bicycle #lovestarbicyclebags #fixitsticks @fixitsticks #essentials</small>
-                           </div>
-                           <img src="../lsphotos/image000466.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000467.jpg" title="First real ride in about a week. Legs felt alright, still was hacking with some lingering rasping in my lungs, but I think I'm over the hump with this illness. Lots of nice trails today, and happened upon a criterium mid-ride! #recoveryride #backinthesaddleagain #cycling #bikechi #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>First real ride in about a week. Legs felt alright, still was hacking with some lingering rasping in my lungs, but I think I'm over the hump with this illness. Lots of nice trails today, and happened upon a criterium mid-ride! #recoveryride #backinthesaddleagain #cycling #bikechi #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000467.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000468.jpg" title="A batch of Lovestar Factory Team saddle packs. two interior color options...both of them rad. #cycling #bikechi #bicycle #lovestarbicyclebags #handmade #bikepacking" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>A batch of Lovestar Factory Team saddle packs. two interior color options...both of them rad. #cycling #bikechi #bicycle #lovestarbicyclebags #handmade #bikepacking</small>
-                           </div>
-                           <img src="../lsphotos/image000468.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000469.jpg" title="Finished up this official Lovestar Factory Team saddle pack this morning. Really pleased with how it turned out. #handmade #cycling #bikechi #bicyclebag #bikepacking #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Finished up this official Lovestar Factory Team saddle pack this morning. Really pleased with how it turned out. #handmade #cycling #bikechi #bicyclebag #bikepacking #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000469.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
