--- a/instagram40.html
+++ b/instagram40.html
@@ -6,6 +6,123 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000461.jpg" title="More Lovestar Saddle Packs. Had some time off for some big life things...now time to get caught up on orders! #lovestarbicyclebags #cycling #bikechi #bikepacking #handmade #custom #sewawesome" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>More Lovestar Saddle Packs. Had some time off for some big life things...now time to get caught up on orders! #lovestarbicyclebags #cycling #bikechi #bikepacking #handmade #custom #sewawesome</small>
+                           </div>
+                           <img src="../lsphotos/image000461.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000462.jpg" title="Finished up this slick Saddle Pack tonight. Shipping out to Germany tomorrow! Grey with blaze orange turned out really well, still one of my favorite color combos #lovestarbicyclebags #handmade #bicycle #cycling #bikepacking #custom" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Finished up this slick Saddle Pack tonight. Shipping out to Germany tomorrow! Grey with blaze orange turned out really well, still one of my favorite color combos #lovestarbicyclebags #handmade #bicycle #cycling #bikepacking #custom</small>
+                           </div>
+                           <img src="../lsphotos/image000462.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000463.jpg" title="Lots of Saddle Packs in the works this weekend. #lovestarbicyclebags #handmade #cycling #bikechi #bikepacking #custom" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Lots of Saddle Packs in the works this weekend. #lovestarbicyclebags #handmade #cycling #bikechi #bikepacking #custom</small>
+                           </div>
+                           <img src="../lsphotos/image000463.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000464.jpg" title="Started accessorizing to my new team kit...both my helmet and shoes came in this week. They are both &quot;hit-you-in-the-face&quot; bright. #lovestarbicyclebags #nofilter lazersport #giro #orangeyougladididntsaybanana" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Started accessorizing to my new team kit...both my helmet and shoes came in this week. They are both "hit-you-in-the-face" bright. #lovestarbicyclebags #nofilter lazersport #giro #orangeyougladididntsaybanana</small>
+                           </div>
+                           <img src="../lsphotos/image000464.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000465.jpg" title="Hey Lovestar Teammates! Looking for some sweet bike kicks to go with our new team kit? Check out these Bont Vaypors on EBay. You wear these with some blue socks... #nextlevel #cycling #lovestarbicyclebags #cyclingstyle @casadewaggoner @agonz21" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Hey Lovestar Teammates! Looking for some sweet bike kicks to go with our new team kit? Check out these Bont Vaypors on EBay. You wear these with some blue socks... #nextlevel #cycling #lovestarbicyclebags #cyclingstyle @casadewaggoner @agonz21</small>
+                           </div>
+                           <img src="../lsphotos/image000465.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000466.jpg" title="My personal Lovestar Saddle Pack ride kit. #cycling #bikechi #bicycle #lovestarbicyclebags #fixitsticks @fixitsticks #essentials" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>My personal Lovestar Saddle Pack ride kit. #cycling #bikechi #bicycle #lovestarbicyclebags #fixitsticks @fixitsticks #essentials</small>
+                           </div>
+                           <img src="../lsphotos/image000466.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000467.jpg" title="First real ride in about a week. Legs felt alright, still was hacking with some lingering rasping in my lungs, but I think I'm over the hump with this illness. Lots of nice trails today, and happened upon a criterium mid-ride! #recoveryride #backinthesaddleagain #cycling #bikechi #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>First real ride in about a week. Legs felt alright, still was hacking with some lingering rasping in my lungs, but I think I'm over the hump with this illness. Lots of nice trails today, and happened upon a criterium mid-ride! #recoveryride #backinthesaddleagain #cycling #bikechi #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000467.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000468.jpg" title="A batch of Lovestar Factory Team saddle packs. two interior color options...both of them rad. #cycling #bikechi #bicycle #lovestarbicyclebags #handmade #bikepacking" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>A batch of Lovestar Factory Team saddle packs. two interior color options...both of them rad. #cycling #bikechi #bicycle #lovestarbicyclebags #handmade #bikepacking</small>
+                           </div>
+                           <img src="../lsphotos/image000468.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000469.jpg" title="Finished up this official Lovestar Factory Team saddle pack this morning. Really pleased with how it turned out. #handmade #cycling #bikechi #bicyclebag #bikepacking #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Finished up this official Lovestar Factory Team saddle pack this morning. Really pleased with how it turned out. #handmade #cycling #bikechi #bicyclebag #bikepacking #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000469.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000470.jpg" title="Next level cycling style...matching your saddle pack to your team kit.  #nextlevel #cycling #lovestarbicyclebags #bikechi #handmade #bikepacking" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -142,123 +259,6 @@
                               <small>Trying to finish up one more Saddle Pack for a customer before heading out to #Denver tomorrow... #lovestarbicyclebags #handmade #bikechi #bikepacking #cycling</small>
                            </div>
                            <img src="../lsphotos/image000480.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000481.jpg" title="Putting some finishing touches on a set of Lovestar bags for a customer. Grey & Black with yellow interiors, this saddle pack / fuel bag combo makes a great do-anything bag combo. #handmade #cycling #bikechi #lovestarbicyclebags #bikepacking" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Putting some finishing touches on a set of Lovestar bags for a customer. Grey & Black with yellow interiors, this saddle pack / fuel bag combo makes a great do-anything bag combo. #handmade #cycling #bikechi #lovestarbicyclebags #bikepacking</small>
-                           </div>
-                           <img src="../lsphotos/image000481.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000482.jpg" title="Lovestar Saddle Pack & Fuel Bag combo in progress for a customer. The Grey with black trim & yellow interior is really poppin' #lovestarbicyclebags #cycling #bikepacking #bikechi #handmade" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Lovestar Saddle Pack & Fuel Bag combo in progress for a customer. The Grey with black trim & yellow interior is really poppin' #lovestarbicyclebags #cycling #bikepacking #bikechi #handmade</small>
-                           </div>
-                           <img src="../lsphotos/image000482.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000483.jpg" title="Long daddy/daughter ride today. He worn her pink jersey and had a post ride biscotti. #giro #futurecyclist #cycling #bikechi #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Long daddy/daughter ride today. He worn her pink jersey and had a post ride biscotti. #giro #futurecyclist #cycling #bikechi #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000483.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000484.jpg" title="Worked at Bike the Drive this morning. My day stared around 2:30am...saw a beautiful sunrise over Lake Michigan, got to ride a small section of a car-free Lake Shore Drive, saw some killer fat bikes from @wisemanframeworks and helped a lot of people get out on bikes today. All in all not a bad way to spend a day. #bikethedrive #bikechi #cycling #lovestarbicyclebags #chicago #lakeshoredrive #carfree" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Worked at Bike the Drive this morning. My day stared around 2:30am...saw a beautiful sunrise over Lake Michigan, got to ride a small section of a car-free Lake Shore Drive, saw some killer fat bikes from @wisemanframeworks and helped a lot of people get out on bikes today. All in all not a bad way to spend a day. #bikethedrive #bikechi #cycling #lovestarbicyclebags #chicago #lakeshoredrive #carfree</small>
-                           </div>
-                           <img src="../lsphotos/image000484.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000485.jpg" title="Found some virgin bike trail pavement today. #bikechi #cycling #lovestarbicyclebags #summer #mcclorypath" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Found some virgin bike trail pavement today. #bikechi #cycling #lovestarbicyclebags #summer #mcclorypath</small>
-                           </div>
-                           <img src="../lsphotos/image000485.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000486.jpg" title="Daddy / daughter recovery ride today. #bikechi #cycling #futurecyclist #lovestarbicyclebags #moots #psyhlox" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Daddy / daughter recovery ride today. #bikechi #cycling #futurecyclist #lovestarbicyclebags #moots #psyhlox</small>
-                           </div>
-                           <img src="../lsphotos/image000486.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000487.jpg" title="Almanzo 100 2014. We came, we saw, we crushed gravel. #almanzorv #almanzo100 #fixitsticks #racedots #gravelgrinder #gravel #lovestarbicyclebags #moots" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Almanzo 100 2014. We came, we saw, we crushed gravel. #almanzorv #almanzo100 #fixitsticks #racedots #gravelgrinder #gravel #lovestarbicyclebags #moots</small>
-                           </div>
-                           <img src="../lsphotos/image000487.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000488.jpg" title="Successful Almanzo 100! #almanzorv #almanzo100 #gravel #gravelgrinder #lovestarbicyclebags #cycling #moots" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Successful Almanzo 100! #almanzorv #almanzo100 #gravel #gravelgrinder #lovestarbicyclebags #cycling #moots</small>
-                           </div>
-                           <img src="../lsphotos/image000488.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000489.jpg" title="Blue & white Lovestar Saddle Pack for a team mate. #handmade #lovestarbicyclebags #cycling #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Blue & white Lovestar Saddle Pack for a team mate. #handmade #lovestarbicyclebags #cycling #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000489.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
