--- a/instagram43.html
+++ b/instagram43.html
@@ -1,6 +1,123 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000521.jpg" title="Step 2 took three drafts and a lot of troubleshooting before I was pleased with the final result. #lovestarbicyclebags #handmade #bikechi #bikepacking" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Step 2 took three drafts and a lot of troubleshooting before I was pleased with the final result. #lovestarbicyclebags #handmade #bikechi #bikepacking</small>
+                           </div>
+                           <img src="../lsphotos/image000521.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000522.jpg" title="First step was relatively simple... #lovestarbicyclebags #handmade #bikechi #hivis" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>First step was relatively simple... #lovestarbicyclebags #handmade #bikechi #hivis</small>
+                           </div>
+                           <img src="../lsphotos/image000522.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000523.jpg" title="Sketchy beginnings... #lovestarbicyclebags #handmade #bikepacking #gravelgrinder" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sketchy beginnings... #lovestarbicyclebags #handmade #bikepacking #gravelgrinder</small>
+                           </div>
+                           <img src="../lsphotos/image000523.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000524.jpg" title="A good morning preview of my latest project. This set of matching bags (there will be a frame bag too) will be traveling to the Almanzo 100 in all of its rad-ness. #lovestarbicyclebags #bikechi #almanzo100 #gravel #bikepacking #handmade #ineedsunglasses" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>A good morning preview of my latest project. This set of matching bags (there will be a frame bag too) will be traveling to the Almanzo 100 in all of its rad-ness. #lovestarbicyclebags #bikechi #almanzo100 #gravel #bikepacking #handmade #ineedsunglasses</small>
+                           </div>
+                           <img src="../lsphotos/image000524.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000525.jpg" title="Prototype gas tank bag... #lovestarbicyclebags #handmade #blackisboring" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Prototype gas tank bag... #lovestarbicyclebags #handmade #blackisboring</small>
+                           </div>
+                           <img src="../lsphotos/image000525.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000526.jpg" title="If you're riding tubulars, a compact secure storage for a spare can be tough to come by. Check out the latest Lovestar Bicycle Bags prototype! #tubulars #lovestarbicyclebags #bikechi #pinstripes #handmade" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>If you're riding tubulars, a compact secure storage for a spare can be tough to come by. Check out the latest Lovestar Bicycle Bags prototype! #tubulars #lovestarbicyclebags #bikechi #pinstripes #handmade</small>
+                           </div>
+                           <img src="../lsphotos/image000526.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000527.jpg" title="Stylish, compact & secure storage for on the ride essentials #instacollage #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Stylish, compact & secure storage for on the ride essentials #instacollage #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000527.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000528.jpg" title="Finished up a batch of black/grey/orange bags. All of them share a wicked orange interior. 3 Cordura & 3 XPac bags in this run. #lovestarbicyclebags #handmade #bikechi #bicyclestyle" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Finished up a batch of black/grey/orange bags. All of them share a wicked orange interior. 3 Cordura & 3 XPac bags in this run. #lovestarbicyclebags #handmade #bikechi #bicyclestyle</small>
+                           </div>
+                           <img src="../lsphotos/image000528.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000529.jpg" title="There's a whole lotta orange Saddle Pack happening tonight. #lovestarbicyclebags #bikechi #handmade #customcolors" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>There's a whole lotta orange Saddle Pack happening tonight. #lovestarbicyclebags #bikechi #handmade #customcolors</small>
+                           </div>
+                           <img src="../lsphotos/image000529.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000530.jpg" title="Finished up a Lovely pair of saddle packs. They're being delivered tomorrow as a customer's Valentines Day gift! #lovestarbicyclebags #valentinesday" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
