--- a/instagram5.html
+++ b/instagram5.html
@@ -6,6 +6,123 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000785.jpg" title="Gotta love cross. One of my finer moments captured right here. Photo credits @snowymountainphotography #melascx #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>Gotta love cross. One of my finer moments captured right here. Photo credits @snowymountainphotography #melascx #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000785.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000783.jpg" title="Fat bike commute courtesy of @elliotlovestarbicycles #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>jim_ftw</h4>
+                              <small>Fat bike commute courtesy of @elliotlovestarbicycles #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000783.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000781.jpg" title="We're having a picnic. #winterbike #fatbike #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>We're having a picnic. #winterbike #fatbike #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000781.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000777.jpg" title="It's amazing how fat biking in the snow with good friends makes you feel like a little kid again #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>agonz21</h4>
+                              <small>It's amazing how fat biking in the snow with good friends makes you feel like a little kid again #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000777.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000776.jpg" title="Pre-dawn start, all smiles, cutting fresh tracks. #fatbike #cycling #bicycle #LovestarRaceClub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Pre-dawn start, all smiles, cutting fresh tracks. #fatbike #cycling #bicycle #LovestarRaceClub</small>
+                           </div>
+                           <img src="../lsphotos/image000776.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000780.jpg" title="Fatbike group ride! #cycling #bicycle #fatbike #LovestarRaceClub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Fatbike group ride! #cycling #bicycle #fatbike #LovestarRaceClub</small>
+                           </div>
+                           <img src="../lsphotos/image000780.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000779.jpg" title="#lovestarraceclub about to go have some lagoon adventures. Winter just got a lot more fun! #fatbike #winterbike #borealisecho" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>#lovestarraceclub about to go have some lagoon adventures. Winter just got a lot more fun! #fatbike #winterbike #borealisecho</small>
+                           </div>
+                           <img src="../lsphotos/image000779.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000782.jpg" title="Skokio drift #snow #mtb #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>oliviabeaty</h4>
+                              <small>Skokio drift #snow #mtb #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000782.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000778.jpg" title="Snow biking through fresh powder is a great way to start your day. #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>jim_ftw</h4>
+                              <small>Snow biking through fresh powder is a great way to start your day. #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000778.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000775.jpg" title="Sunrise ride. Frozen lagoons. There is no off season for bicycles, since getting a fatbike winter is rapidly becoming one of my favorite times to ride. #cycling #bicycle #fatbike #bikechi #45nrth #icebike #bikepacking #lovestarbicyclebags" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -142,123 +259,6 @@
                               <small>@ddave12000 crushing at a very snowy and wet state championship race. #montrosecx #bicycle #cycling #cyclocross #cx #LovestarRaceClub</small>
                            </div>
                            <img src="../lsphotos/image000766.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000763.jpg" title="I have some truly amazing teammates. #LovestarRaceClub #cycling #bicycle #teamcookies" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>I have some truly amazing teammates. #LovestarRaceClub #cycling #bicycle #teamcookies</small>
-                           </div>
-                           <img src="../lsphotos/image000763.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000762.jpg" title="#lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>kristinangraham</h4>
-                              <small>#lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000762.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000761.jpg" title="Morning suffer session. #cycling #bicycle #rollers #LovestarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Morning suffer session. #cycling #bicycle #rollers #LovestarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000761.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000760.jpg" title="Evening rides - bright glasses. #cycling #bicycle #bikechi #LovestarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Evening rides - bright glasses. #cycling #bicycle #bikechi #LovestarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000760.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000759.jpg" title="Fun Friday Frío ride with a warm stop at @backlotcoffee #lovestarraceclub  #bluebikeclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>agonz21</h4>
-                              <small>Fun Friday Frío ride with a warm stop at @backlotcoffee #lovestarraceclub  #bluebikeclub</small>
-                           </div>
-                           <img src="../lsphotos/image000759.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000758.jpg" title="Birthday bike needs a custom color-matched #LovestarBicycleBags seat bag. #handmade #bicycle #cycling #dadlife #clearybikes" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Birthday bike needs a custom color-matched #LovestarBicycleBags seat bag. #handmade #bicycle #cycling #dadlife #clearybikes</small>
-                           </div>
-                           <img src="../lsphotos/image000758.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000001.jpg" title="Cold #squad #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>oliviabeaty</h4>
-                              <small>Cold #squad #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000001.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000005.jpg" title="Cold morning... hot coffee. #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>jim_ftw</h4>
-                              <small>Cold morning... hot coffee. #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000005.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000011.jpg" title="Sunrise ride...probably one of the last really nice days this season. Makin' the most of it. #bikechi #cycling #ridecannondale #bicycle #cyclocross #cx #LoveStarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Sunrise ride...probably one of the last really nice days this season. Makin' the most of it. #bikechi #cycling #ridecannondale #bicycle #cyclocross #cx #LoveStarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000011.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
