--- a/instagram6.html
+++ b/instagram6.html
@@ -6,6 +6,123 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000763.jpg" title="I have some truly amazing teammates. #LovestarRaceClub #cycling #bicycle #teamcookies" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>I have some truly amazing teammates. #LovestarRaceClub #cycling #bicycle #teamcookies</small>
+                           </div>
+                           <img src="../lsphotos/image000763.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000762.jpg" title="#lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>kristinangraham</h4>
+                              <small>#lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000762.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000761.jpg" title="Morning suffer session. #cycling #bicycle #rollers #LovestarRaceClub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Morning suffer session. #cycling #bicycle #rollers #LovestarRaceClub</small>
+                           </div>
+                           <img src="../lsphotos/image000761.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000760.jpg" title="Evening rides - bright glasses. #cycling #bicycle #bikechi #LovestarRaceClub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Evening rides - bright glasses. #cycling #bicycle #bikechi #LovestarRaceClub</small>
+                           </div>
+                           <img src="../lsphotos/image000760.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000759.jpg" title="Fun Friday Frío ride with a warm stop at @backlotcoffee #lovestarraceclub  #bluebikeclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>agonz21</h4>
+                              <small>Fun Friday Frío ride with a warm stop at @backlotcoffee #lovestarraceclub  #bluebikeclub</small>
+                           </div>
+                           <img src="../lsphotos/image000759.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000758.jpg" title="Birthday bike needs a custom color-matched #LovestarBicycleBags seat bag. #handmade #bicycle #cycling #dadlife #clearybikes" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Birthday bike needs a custom color-matched #LovestarBicycleBags seat bag. #handmade #bicycle #cycling #dadlife #clearybikes</small>
+                           </div>
+                           <img src="../lsphotos/image000758.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000001.jpg" title="Cold #squad #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>oliviabeaty</h4>
+                              <small>Cold #squad #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000001.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000005.jpg" title="Cold morning... hot coffee. #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>jim_ftw</h4>
+                              <small>Cold morning... hot coffee. #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000005.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000011.jpg" title="Sunrise ride...probably one of the last really nice days this season. Makin' the most of it. #bikechi #cycling #ridecannondale #bicycle #cyclocross #cx #LoveStarRaceClub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sunrise ride...probably one of the last really nice days this season. Makin' the most of it. #bikechi #cycling #ridecannondale #bicycle #cyclocross #cx #LoveStarRaceClub</small>
+                           </div>
+                           <img src="../lsphotos/image000011.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000003.jpg" title="Today's off to a good start. #lovestarraceclub" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>theandyhudson</h4>
@@ -142,123 +259,6 @@
                               <small>It's been a rough couple weeks for my cycling. Off the bike a lot with illness, sick kids, cold-wet & dark weather...this morning I got up early for a garage roller session to start getting my legs back under me. Felt really good in a horrifying painful kind of way. #cycling #bicycle #lovestarraceclub</small>
                            </div>
                            <img src="../lsphotos/image000017.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000088.jpg" title="Blacked out #LovestarBicycleBags SaddlePack finished up during the kids naps today. #handmade #cycling #bicycle #bicyclebag #bikepacking #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Blacked out #LovestarBicycleBags SaddlePack finished up during the kids naps today. #handmade #cycling #bicycle #bicyclebag #bikepacking #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000088.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000019.jpg" title="Post race bike cleaning time. #cycling #cyclocross #cx #bicycle #LovestarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Post race bike cleaning time. #cycling #cyclocross #cx #bicycle #LovestarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000019.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000541.jpg" title="Taking the top spot for riders under two 😊 #cyclocrosschicago #cycling #firstrace #adorablegrandson #bike #lovestarfactoryteam #youngestrider #thiskidlovestoride #happyday #fun" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>Taking the top spot for riders under two 😊 #cyclocrosschicago #cycling #firstrace #adorablegrandson #bike #lovestarfactoryteam #youngestrider #thiskidlovestoride #happyday #fun</small>
-                           </div>
-                           <img src="../lsphotos/image000541.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000089.jpg" title="Great race today Lovestar Factory Team!!! #cyclocrosschicago #cycling #lovestarfactoryteam #cyclocross #lovestarbicyclebags #lovestar" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>Great race today Lovestar Factory Team!!! #cyclocrosschicago #cycling #lovestarfactoryteam #cyclocross #lovestarbicyclebags #lovestar</small>
-                           </div>
-                           <img src="../lsphotos/image000089.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000090.jpg" title="First race. Done. So happy. So proud. #firstrace #cyclocrosschicago #bike #lovestarfactoryteam #youngest #elliotlovestarbicycles #racingteam #lovestarbicyclebags #prouddaddy #thislittleguylovestoride" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>First race. Done. So happy. So proud. #firstrace #cyclocrosschicago #bike #lovestarfactoryteam #youngest #elliotlovestarbicycles #racingteam #lovestarbicyclebags #prouddaddy #thislittleguylovestoride</small>
-                           </div>
-                           <img src="../lsphotos/image000090.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000091.jpg" title="First race. Puddles were the highlight! #firstrace #cyclocrosschicago #lovestarfactoryteam #youngestrider #cycling #bike #elliotlovestarbicycle #lovestarbicyclebags #dadisproud" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>First race. Puddles were the highlight! #firstrace #cyclocrosschicago #lovestarfactoryteam #youngestrider #cycling #bike #elliotlovestarbicycle #lovestarbicyclebags #dadisproud</small>
-                           </div>
-                           <img src="../lsphotos/image000091.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000021.jpg" title="First CX race in the books! Complete with mud and everything...great job Riley! #lovestarraceclub #cyclocross" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>First CX race in the books! Complete with mud and everything...great job Riley! #lovestarraceclub #cyclocross</small>
-                           </div>
-                           <img src="../lsphotos/image000021.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000022.jpg" title="Congrats to Rob on his podium finish! #lovestarraceclub #numberone" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>oliviabeaty</h4>
-                              <small>Congrats to Rob on his podium finish! #lovestarraceclub #numberone</small>
-                           </div>
-                           <img src="../lsphotos/image000022.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000023.jpg" title="First cross race. #cyclocross #cx #cycling #bicycle #LovestarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>First cross race. #cyclocross #cx #cycling #bicycle #LovestarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000023.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
