--- a/instagram9.html
+++ b/instagram9.html
@@ -6,6 +6,123 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000048.jpg" title="#cycling #bicycle #ridecannondale #LovestarRaceClub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#cycling #bicycle #ridecannondale #LovestarRaceClub</small>
+                           </div>
+                           <img src="../lsphotos/image000048.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000049.jpg" title="@theandyhudson looking like he got a workout this morning 🚲😅 #cycling #bicycle #LovestarRaceClub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>@theandyhudson looking like he got a workout this morning 🚲😅 #cycling #bicycle #LovestarRaceClub</small>
+                           </div>
+                           <img src="../lsphotos/image000049.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000050.jpg" title="Thanks to @theandyhudson @ddave12000 & Ben M. For keeping me motivated when getting up to ride in the dark gets hard. And here's a picture of my bike...because it's new and I'm obsessed with it. #cycling #bicycle #ridecannondale #LovestarRaceClub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Thanks to @theandyhudson @ddave12000 & Ben M. For keeping me motivated when getting up to ride in the dark gets hard. And here's a picture of my bike...because it's new and I'm obsessed with it. #cycling #bicycle #ridecannondale #LovestarRaceClub</small>
+                           </div>
+                           <img src="../lsphotos/image000050.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000051.jpg" title="Good morning to you, too, #shelfcloud #sudzon #lovestarraceclub #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>oliviabeaty</h4>
+                              <small>Good morning to you, too, #shelfcloud #sudzon #lovestarraceclub #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000051.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000052.jpg" title="Storm vibes at the end of this morning's ride. #LovestarRaceClub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>Storm vibes at the end of this morning's ride. #LovestarRaceClub</small>
+                           </div>
+                           <img src="../lsphotos/image000052.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000053.jpg" title="New bike day!!! Glorious sunrise ride this morning. Thanks to @ponylou and the rest of my Pony Shop peeps for putting up with my decision making process 🚲🙌 #newbikeday #cycling #superX #ridecannondale #lovestarraceclub #baaw #bicycle" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>New bike day!!! Glorious sunrise ride this morning. Thanks to @ponylou and the rest of my Pony Shop peeps for putting up with my decision making process 🚲🙌 #newbikeday #cycling #superX #ridecannondale #lovestarraceclub #baaw #bicycle</small>
+                           </div>
+                           <img src="../lsphotos/image000053.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000054.jpg" title="First time at @backlotcoffee first nitro! #yum #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>oliviabeaty</h4>
+                              <small>First time at @backlotcoffee first nitro! #yum #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000054.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000542.jpg" title="From Sunday, a stylized @agonz21 crushing a turn at #chicrosscup. #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>jim_ftw</h4>
+                              <small>From Sunday, a stylized @agonz21 crushing a turn at #chicrosscup. #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000542.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000098.jpg" title="Because black goes with everything. #lovestarbicyclebags #handmade #bicycle #cycling #bicyclebag #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Because black goes with everything. #lovestarbicyclebags #handmade #bicycle #cycling #bicyclebag #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000098.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000055.jpg" title="Can't/Won't (stop) #LovestarRaceClub" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>theandyhudson</h4>
@@ -142,123 +259,6 @@
                               <small>First ride post adventure....phew, my legs are still tired. 🚲😳 #cycling #bicycle #LovestarRaceClub</small>
                            </div>
                            <img src="../lsphotos/image000063.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000064.jpg" title="Definitely cleared that barrier! #lovestarraceclub #cxrelay #crossishere" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Definitely cleared that barrier! #lovestarraceclub #cxrelay #crossishere</small>
-                           </div>
-                           <img src="../lsphotos/image000064.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000065.jpg" title="Somebody is loving his new bike! #jnbs #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Somebody is loving his new bike! #jnbs #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000065.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000066.jpg" title="Great recovery ride with the Harriff Boyz. Even got to ride through The Funnel. #lovestarraceclub #funnel" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>agonz21</h4>
-                              <small>Great recovery ride with the Harriff Boyz. Even got to ride through The Funnel. #lovestarraceclub #funnel</small>
-                           </div>
-                           <img src="../lsphotos/image000066.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000067.jpg" title="Beautiful morning with the #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>theandyhudson</h4>
-                              <small>Beautiful morning with the #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000067.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000102.jpg" title="Celebratory Alfredo Mac & bombers in the shadow of the mountain. #mthood #bikepacking #lovestarbicyclebags #bikecamping" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Celebratory Alfredo Mac & bombers in the shadow of the mountain. #mthood #bikepacking #lovestarbicyclebags #bikecamping</small>
-                           </div>
-                           <img src="../lsphotos/image000102.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000103.jpg" title="Lolo Pass Hut. #mthood #bikepacking #bikecamping #lovestarbicyclebags #fatbike #cycling" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Lolo Pass Hut. #mthood #bikepacking #bikecamping #lovestarbicyclebags #fatbike #cycling</small>
-                           </div>
-                           <img src="../lsphotos/image000103.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000104.jpg" title="Always be strava-ing #bikepacking #bikecamping #mthood #lovestarbicyclebags #strava #kom" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Always be strava-ing #bikepacking #bikecamping #mthood #lovestarbicyclebags #strava #kom</small>
-                           </div>
-                           <img src="../lsphotos/image000104.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000105.jpg" title="Trillium Lake #mtb #fatbike #bikepacking #bikecanping #mthood #trilliumlake #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Trillium Lake #mtb #fatbike #bikepacking #bikecanping #mthood #trilliumlake #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000105.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000070.jpg" title="Day 3, Mt Hood loop. Taking some time to chill and enjoy the scenery. Such a beautiful place... #lovestarraceclub #trilliumlake" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>agonz21</h4>
-                              <small>Day 3, Mt Hood loop. Taking some time to chill and enjoy the scenery. Such a beautiful place... #lovestarraceclub #trilliumlake</small>
-                           </div>
-                           <img src="../lsphotos/image000070.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
